@@ -4,14 +4,13 @@ import org.apereo.cas.configuration.support.DurationCapable;
 import org.apereo.cas.configuration.support.RequiredProperty;
 import org.apereo.cas.configuration.support.RequiresModule;
 
-import com.fasterxml.jackson.annotation.JsonFilter;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -24,9 +23,10 @@ import java.util.stream.Stream;
 @Setter
 @RequiresModule(name = "cas-server-support-cassandra-core")
 @Accessors(chain = true)
-@JsonFilter("BaseCassandraProperties")
+
 public abstract class BaseCassandraProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 3708645268337674572L;
 
     /**
@@ -49,9 +49,22 @@ public abstract class BaseCassandraProperties implements Serializable {
 
     /**
      * The list of contact points to use for the new cluster.
+     * Each contact point should be defined using the syntax {@code address:port}.
      */
     @RequiredProperty
-    private List<String> contactPoints = Stream.of("localhost:9042").collect(Collectors.toList());
+    private List<String> contactPoints = Stream.of("localhost:9042").toList();
+
+    /**
+     * Set the protocol versions enabled for use on this engine. Once the setting is set,
+     * only protocols listed in the protocols parameter are enabled for use.
+     */
+    private String[] sslProtocols;
+
+    /**
+     * The cipher suites to use, or empty/null to use the default ones.
+     * Note that host name validation will always be done using HTTPS algorithm.
+     */
+    private String[] sslCipherSuites;
 
     /**
      * Used by a DC-ware round-robin load balancing policy.
