@@ -1,20 +1,18 @@
 package org.apereo.cas.configuration.model.support.consent;
 
+import org.apereo.cas.configuration.model.core.util.EncryptionJwtCryptoProperties;
 import org.apereo.cas.configuration.model.core.util.EncryptionJwtSigningJwtCryptographyProperties;
+import org.apereo.cas.configuration.model.core.util.SigningJwtCryptoProperties;
 import org.apereo.cas.configuration.model.core.web.flow.WebflowAutoConfigurationProperties;
 import org.apereo.cas.configuration.support.RequiresModule;
-import org.apereo.cas.util.crypto.CipherExecutor;
-
-import com.fasterxml.jackson.annotation.JsonFilter;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 import org.springframework.boot.context.properties.NestedConfigurationProperty;
-
+import java.io.Serial;
 import java.io.Serializable;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -27,9 +25,10 @@ import java.util.stream.Stream;
 @Getter
 @Setter
 @Accessors(chain = true)
-@JsonFilter("ConsentCoreProperties")
+
 public class ConsentCoreProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 5211308051524438384L;
 
     /**
@@ -39,7 +38,7 @@ public class ConsentCoreProperties implements Serializable {
 
     /**
      * Whether consent functionality should be globally
-     * applicapable to all applications and requests.
+     * applicable to all applications and requests.
      */
     private boolean active = true;
 
@@ -59,9 +58,9 @@ public class ConsentCoreProperties implements Serializable {
      * Attributes that should always and globally be excluded
      * from the list of consentable attributes. Such attributes
      * are always ignored during consent rule calculations
-     * and users will not be prmopted to consent to their release..
+     * and users will not be prompted to consent to their release..
      */
-    private List<String> excludedAttributes = Stream.of("eduPersonTargetedID").collect(Collectors.toList());
+    private List<String> excludedAttributes = Stream.of("eduPersonTargetedID").toList();
 
     /**
      * Signing/encryption settings.
@@ -76,7 +75,7 @@ public class ConsentCoreProperties implements Serializable {
     private WebflowAutoConfigurationProperties webflow = new WebflowAutoConfigurationProperties().setOrder(100);
 
     public ConsentCoreProperties() {
-        crypto.getEncryption().setKeySize(CipherExecutor.DEFAULT_STRINGABLE_ENCRYPTION_KEY_SIZE);
-        crypto.getSigning().setKeySize(CipherExecutor.DEFAULT_STRINGABLE_SIGNING_KEY_SIZE);
+        crypto.getEncryption().setKeySize(EncryptionJwtCryptoProperties.DEFAULT_STRINGABLE_ENCRYPTION_KEY_SIZE);
+        crypto.getSigning().setKeySize(SigningJwtCryptoProperties.DEFAULT_STRINGABLE_SIGNING_KEY_SIZE);
     }
 }
