@@ -3,13 +3,13 @@ package org.apereo.cas.configuration.model.support.saml.idp;
 import org.apereo.cas.configuration.support.DurationCapable;
 import org.apereo.cas.configuration.support.RequiresModule;
 
-import com.fasterxml.jackson.annotation.JsonFilter;
 import com.google.common.base.Splitter;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 import lombok.val;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -27,9 +27,10 @@ import java.util.Map;
 @Getter
 @Setter
 @Accessors(chain = true)
-@JsonFilter("SamlIdPResponseProperties")
+
 public class SamlIdPResponseProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 7200477683583467619L;
 
     /**
@@ -48,12 +49,6 @@ public class SamlIdPResponseProperties implements Serializable {
      * Whether error responses should be signed.
      */
     private boolean signError;
-
-    /**
-     * The default authentication context class to include in the response
-     * if none is specified via the service.
-     */
-    private String defaultAuthenticationContextClass = "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport";
 
     /**
      * Indicates the default name-format for all attributes
@@ -83,7 +78,7 @@ public class SamlIdPResponseProperties implements Serializable {
                     val values = Splitter.on("->").splitToList(format);
 
                     if (values.size() == 2) {
-                        nameFormats.put(values.get(0), values.get(1));
+                        nameFormats.put(values.getFirst(), values.get(1));
                     }
                 }));
         return nameFormats;
