@@ -1,12 +1,11 @@
 package org.apereo.cas.authentication.handler.support.jaas;
 
-import org.apereo.cas.util.LoggingUtils;
+import org.apereo.cas.util.function.FunctionUtils;
 
 import com.google.common.base.Splitter;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 
@@ -18,6 +17,7 @@ import javax.security.auth.callback.PasswordCallback;
 import javax.security.auth.login.FailedLoginException;
 import javax.security.auth.login.LoginException;
 import javax.security.auth.spi.LoginModule;
+
 import java.security.Principal;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -28,12 +28,11 @@ import java.util.Map;
  * @author Misagh Moayyed
  * @since 5.3.0
  */
-@Slf4j
 public class AccountsPreDefinedLoginModule implements LoginModule {
     private Subject subject;
 
     private CallbackHandler callbackHandler;
-    
+
     private Map<String, String> accounts;
 
     private boolean succeeded;
@@ -51,7 +50,7 @@ public class AccountsPreDefinedLoginModule implements LoginModule {
             eachAccount.stream()
                 .map(account -> Splitter.on("::").splitToList(account))
                 .filter(results -> results.size() == 2)
-                .forEach(results -> accounts.put(results.get(0), results.get(1)));
+                .forEach(results -> accounts.put(results.getFirst(), results.get(1)));
         }
     }
 
@@ -60,12 +59,11 @@ public class AccountsPreDefinedLoginModule implements LoginModule {
         val nameCallback = new NameCallback("username");
         val passwordCallback = new PasswordCallback("password", false);
 
-        try {
+        FunctionUtils.doAndHandle(o -> {
             callbackHandler.handle(new Callback[]{nameCallback, passwordCallback});
-        } catch (final Exception e) {
-            LoggingUtils.error(LOGGER, e);
-            throw new FailedLoginException(e.getMessage());
-        }
+        }, throwable -> {
+            throw new FailedLoginException(throwable.getMessage());
+        }).accept(nameCallback);
 
         val username = nameCallback.getName();
         if (accounts.containsKey(username)) {
