@@ -1,32 +1,36 @@
 package org.apereo.cas.authentication;
 
 import org.apereo.cas.CasProtocolConstants;
+import org.apereo.cas.authentication.attribute.StubPersonAttributeDao;
 import org.apereo.cas.authentication.credential.HttpBasedServiceCredential;
 import org.apereo.cas.authentication.credential.UsernamePasswordCredential;
 import org.apereo.cas.authentication.handler.support.SimpleTestUsernamePasswordAuthenticationHandler;
-import org.apereo.cas.authentication.metadata.BasicCredentialMetaData;
+import org.apereo.cas.authentication.metadata.BasicCredentialMetadata;
 import org.apereo.cas.authentication.principal.DefaultPrincipalElectionStrategy;
 import org.apereo.cas.authentication.principal.Principal;
 import org.apereo.cas.authentication.principal.PrincipalFactoryUtils;
 import org.apereo.cas.authentication.principal.Service;
 import org.apereo.cas.authentication.principal.WebApplicationService;
-import org.apereo.cas.services.RegisteredService;
+import org.apereo.cas.authentication.principal.resolvers.EchoingPrincipalResolver;
+import org.apereo.cas.multitenancy.DefaultTenantExtractor;
+import org.apereo.cas.multitenancy.DefaultTenantsManager;
+import org.apereo.cas.services.CasModelRegisteredService;
 import org.apereo.cas.services.RegisteredServiceAccessStrategy;
 import org.apereo.cas.services.RegisteredServiceAuthenticationPolicy;
+import org.apereo.cas.services.ServicesManager;
 import org.apereo.cas.util.CollectionUtils;
-
+import org.apereo.cas.util.function.FunctionUtils;
 import lombok.experimental.UtilityClass;
 import lombok.val;
-import org.apereo.services.persondir.support.StubPersonAttributeDao;
-
-import java.net.MalformedURLException;
-import java.net.URL;
+import org.springframework.context.support.StaticApplicationContext;
+import java.net.URI;
 import java.time.ZonedDateTime;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
-
+import java.util.UUID;
 import static org.mockito.Mockito.*;
 
 /**
@@ -59,8 +63,7 @@ public class CoreAuthenticationTestUtils {
     public static UsernamePasswordCredential getCredentialsWithDifferentUsernameAndPassword(final String username, final String password) {
         val usernamePasswordCredentials = new UsernamePasswordCredential();
         usernamePasswordCredentials.setUsername(username);
-        usernamePasswordCredentials.setPassword(password);
-
+        usernamePasswordCredentials.assignPassword(password);
         return usernamePasswordCredentials;
     }
 
@@ -70,8 +73,8 @@ public class CoreAuthenticationTestUtils {
 
     public static HttpBasedServiceCredential getHttpBasedServiceCredentials(final String url) {
         try {
-            return new HttpBasedServiceCredential(new URL(url), getRegisteredService(url));
-        } catch (final MalformedURLException e) {
+            return new HttpBasedServiceCredential(new URI(url).toURL(), getRegisteredService(url));
+        } catch (final Exception e) {
             throw new IllegalArgumentException();
         }
     }
@@ -93,16 +96,16 @@ public class CoreAuthenticationTestUtils {
 
     public static WebApplicationService getWebApplicationService(final String id) {
         val svc = mock(WebApplicationService.class);
-        when(svc.getId()).thenReturn(id);
-        when(svc.getOriginalUrl()).thenReturn(id);
-        when(svc.getSource()).thenReturn(CasProtocolConstants.PARAMETER_SERVICE);
+        lenient().when(svc.getId()).thenReturn(id);
+        lenient().when(svc.getOriginalUrl()).thenReturn(id);
+        lenient().when(svc.getSource()).thenReturn(CasProtocolConstants.PARAMETER_SERVICE);
         return svc;
     }
 
     public static StubPersonAttributeDao getAttributeRepository() {
         val attributes = new HashMap<String, List<Object>>();
         attributes.put("uid", CollectionUtils.wrap(CONST_USERNAME));
-        attributes.put("cn", CollectionUtils.wrap(CONST_USERNAME.toUpperCase()));
+        attributes.put("cn", CollectionUtils.wrap(CONST_USERNAME.toUpperCase(Locale.ENGLISH)));
         attributes.put("givenName", CollectionUtils.wrap(CONST_USERNAME));
         attributes.put("mail", CollectionUtils.wrap(CONST_USERNAME + "@example.org"));
         attributes.put("memberOf", CollectionUtils.wrapList("system", "admin", "cas", "staff"));
@@ -127,7 +130,7 @@ public class CoreAuthenticationTestUtils {
     }
 
     public static Principal getPrincipal(final String name, final Map<String, List<Object>> attributes) {
-        return PrincipalFactoryUtils.newPrincipalFactory().createPrincipal(name, attributes);
+        return FunctionUtils.doUnchecked(() -> PrincipalFactoryUtils.newPrincipalFactory().createPrincipal(name, attributes));
     }
 
     public static Authentication getAuthentication() {
@@ -154,63 +157,69 @@ public class CoreAuthenticationTestUtils {
         return getAuthentication(principal, attributes, null);
     }
 
-    public static Authentication getAuthentication(final Map<String, List<Object>> authnAttributes) {
+    public static Authentication getAuthentication(final Map<String, List<Object>> authnAttributes){
         return getAuthentication(getPrincipal(CONST_USERNAME), authnAttributes, null);
     }
 
     public static Authentication getAuthentication(final Principal principal, final Map<String, List<Object>> attributes, final ZonedDateTime authnDate) {
         val handler = new SimpleTestUsernamePasswordAuthenticationHandler();
-        val meta = new BasicCredentialMetaData(new UsernamePasswordCredential());
+        val credential = new UsernamePasswordCredential("casuser", UUID.randomUUID().toString());
+        credential.setCredentialMetadata(new BasicCredentialMetadata(credential));
         return new DefaultAuthenticationBuilder(principal)
-            .addCredential(meta)
+            .addCredential(credential)
             .setAuthenticationDate(authnDate)
-            .addSuccess(handler.getName(), new DefaultAuthenticationHandlerExecutionResult(handler, meta))
+            .addSuccess(handler.getName(), new DefaultAuthenticationHandlerExecutionResult(handler, credential))
             .setAttributes(attributes)
             .build();
     }
 
-    public static RegisteredService getRegisteredService() {
+    public static CasModelRegisteredService getRegisteredService() {
         return getRegisteredService(CONST_TEST_URL);
     }
 
-    public static RegisteredService getRegisteredService(final String url) {
-        val service = mock(RegisteredService.class);
-        when(service.getServiceId()).thenReturn(url);
-        when(service.getName()).thenReturn("service name");
-        when(service.getId()).thenReturn(Long.MAX_VALUE);
-        when(service.getDescription()).thenReturn("service description");
+    public static CasModelRegisteredService getRegisteredService(final String name, final String url) {
+        val service = mock(CasModelRegisteredService.class);
+        lenient().when(service.getFriendlyName()).thenCallRealMethod();
+        lenient().when(service.getServiceId()).thenReturn(url);
+        lenient().when(service.getName()).thenReturn(name);
+        lenient().when(service.getId()).thenReturn(Long.MAX_VALUE);
+        lenient().when(service.getDescription()).thenReturn("service description");
 
         val access = mock(RegisteredServiceAccessStrategy.class);
-        when(access.isServiceAccessAllowed()).thenReturn(true);
-        when(service.getAccessStrategy()).thenReturn(access);
+        lenient().when(access.isServiceAccessAllowed(any(), any())).thenReturn(true);
+        lenient().when(access.isServiceAccessAllowedForSso(any())).thenReturn(true);
+        lenient().when(service.getAccessStrategy()).thenReturn(access);
 
         val authnPolicy = mock(RegisteredServiceAuthenticationPolicy.class);
-        when(authnPolicy.getRequiredAuthenticationHandlers()).thenReturn(Set.of());
-        when(service.getAuthenticationPolicy()).thenReturn(authnPolicy);
+        lenient().when(authnPolicy.getRequiredAuthenticationHandlers()).thenReturn(Set.of());
+        lenient().when(service.getAuthenticationPolicy()).thenReturn(authnPolicy);
         return service;
     }
 
-    public static AuthenticationResult getAuthenticationResult(final AuthenticationSystemSupport support, final Service service)
-        throws AuthenticationException {
+    public static CasModelRegisteredService getRegisteredService(final String url) {
+        return getRegisteredService("service name", url);
+    }
+
+    public static AuthenticationResult getAuthenticationResult(final AuthenticationSystemSupport support,
+                                                               final Service service) {
         return getAuthenticationResult(support, service, getCredentialsWithSameUsernameAndPassword());
     }
 
-    public static AuthenticationResult getAuthenticationResult(final AuthenticationSystemSupport support) throws AuthenticationException {
+    public static AuthenticationResult getAuthenticationResult(final AuthenticationSystemSupport support) {
         return getAuthenticationResult(support, getWebApplicationService(), getCredentialsWithSameUsernameAndPassword());
     }
 
-    public static AuthenticationResult getAuthenticationResult(final AuthenticationSystemSupport support, final Credential... credentials)
-        throws AuthenticationException {
+    public static AuthenticationResult getAuthenticationResult(final AuthenticationSystemSupport support,
+                                                               final Credential... credentials) {
         return getAuthenticationResult(support, getWebApplicationService(), credentials);
     }
 
     public static AuthenticationResult getAuthenticationResult(final AuthenticationSystemSupport support, final Service service,
-                                                               final Credential... credentials) throws AuthenticationException {
-
-        return support.finalizeAuthenticationTransaction(service, credentials);
+                                                               final Credential... credentials) {
+        return FunctionUtils.doUnchecked(() -> support.finalizeAuthenticationTransaction(service, credentials));
     }
 
-    public static AuthenticationResult getAuthenticationResult() throws AuthenticationException {
+    public static AuthenticationResult getAuthenticationResult() {
         return getAuthenticationResult(getWebApplicationService(), getAuthentication());
     }
 
@@ -234,11 +243,11 @@ public class CoreAuthenticationTestUtils {
     }
 
     public static AuthenticationBuilder getAuthenticationBuilder(final Principal principal) {
-        val meta = new BasicCredentialMetaData(new UsernamePasswordCredential());
+        val credential = new UsernamePasswordCredential();
         val handler = new SimpleTestUsernamePasswordAuthenticationHandler();
         return new DefaultAuthenticationBuilder(principal)
-            .addCredential(meta)
-            .addSuccess(handler.getName(), new DefaultAuthenticationHandlerExecutionResult(handler, meta));
+            .addCredential(credential)
+            .addSuccess(handler.getName(), new DefaultAuthenticationHandlerExecutionResult(handler, credential));
     }
 
     public static AuthenticationBuilder getAuthenticationBuilder(final Principal principal,
@@ -246,15 +255,39 @@ public class CoreAuthenticationTestUtils {
                                                                  final Map<String, List<Object>> attributes) {
         val builder = new DefaultAuthenticationBuilder(principal).setAttributes(attributes);
         handlers.forEach((credential, handler) -> {
-            builder.addSuccess(handler.getName(), new DefaultAuthenticationHandlerExecutionResult(handler, new BasicCredentialMetaData(credential)));
-            builder.addCredential(new BasicCredentialMetaData(credential));
+            builder.addSuccess(handler.getName(), new DefaultAuthenticationHandlerExecutionResult(handler, credential));
+            builder.addCredential(credential);
         });
         return builder;
     }
 
     public static AuthenticationSystemSupport getAuthenticationSystemSupport() {
-        val authSupport = mock(AuthenticationSystemSupport.class);
-        when(authSupport.getPrincipalElectionStrategy()).thenReturn(new DefaultPrincipalElectionStrategy());
-        return authSupport;
+        return getAuthenticationSystemSupport(mock(AuthenticationManager.class), mock(ServicesManager.class));
+    }
+
+    public static AuthenticationSystemSupport getAuthenticationSystemSupport(final AuthenticationManager authenticationManager,
+                                                                             final ServicesManager servicesManager) {
+        val staticApplicationContext = new StaticApplicationContext();
+        staticApplicationContext.refresh();
+        
+        val principalElectionStrategy = new DefaultPrincipalElectionStrategy();
+        val tenantsManager = new DefaultTenantsManager();
+        return new DefaultAuthenticationSystemSupport(
+            new DefaultAuthenticationTransactionManager(staticApplicationContext, authenticationManager),
+            principalElectionStrategy,
+            new DefaultAuthenticationResultBuilderFactory(principalElectionStrategy),
+            getAuthenticationTransactionFactory(servicesManager),
+            servicesManager,
+            new EchoingPrincipalResolver(),
+            PrincipalFactoryUtils.newPrincipalFactory(),
+            new DefaultTenantExtractor(tenantsManager), tenantsManager);
+    }
+
+    public static AuthenticationTransactionFactory getAuthenticationTransactionFactory(final ServicesManager servicesManager) {
+        return new DefaultAuthenticationTransactionFactory(servicesManager);
+    }
+
+    public static AuthenticationTransactionFactory getAuthenticationTransactionFactory() {
+        return new DefaultAuthenticationTransactionFactory(mock(ServicesManager.class));
     }
 }
