@@ -2,33 +2,30 @@ package org.apereo.cas.services;
 
 import org.apereo.cas.CoreAttributesTestUtils;
 import org.apereo.cas.authentication.CoreAuthenticationTestUtils;
-import org.apereo.cas.config.CasCoreUtilConfiguration;
+import org.apereo.cas.config.CasCoreScriptingAutoConfiguration;
+import org.apereo.cas.config.CasCoreUtilAutoConfiguration;
+import org.apereo.cas.test.CasTestExtension;
 import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.RandomUtils;
-import org.apereo.cas.util.scripting.GroovyScriptResourceCacheManager;
-import org.apereo.cas.util.scripting.ScriptResourceCacheManager;
 import org.apereo.cas.util.serialization.JacksonObjectMapperFactory;
 import org.apereo.cas.util.spring.ApplicationContextProvider;
-
+import org.apereo.cas.util.spring.boot.SpringBootTestAutoConfigurations;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ArrayListMultimap;
 import lombok.val;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.ArrayUtils;
 import org.jooq.lambda.Unchecked;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.core.io.ClassPathResource;
-
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -39,7 +36,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -48,37 +44,29 @@ import static org.mockito.Mockito.*;
  * @since 5.0.0
  */
 @Tag("Attributes")
+@ExtendWith(CasTestExtension.class)
+@SpringBootTestAutoConfigurations
 @SpringBootTest(classes = {
-    RefreshAutoConfiguration.class,
-    CasCoreUtilConfiguration.class
+    CasCoreUtilAutoConfiguration.class,
+    CasCoreScriptingAutoConfiguration.class
 })
-public class ReturnMappedAttributeReleasePolicyTests {
-
-    private static final File JSON_FILE = new File(FileUtils.getTempDirectoryPath(), "returnMappedAttributeReleasePolicy.json");
+class ReturnMappedAttributeReleasePolicyTests {
 
     private static final ObjectMapper MAPPER = JacksonObjectMapperFactory.builder()
         .defaultTypingEnabled(true).build().toObjectMapper();
 
     @Autowired
     private ConfigurableApplicationContext applicationContext;
-
-    @BeforeEach
-    public void beforeEach() {
-        ApplicationContextProvider.holdApplicationContext(applicationContext);
-        ApplicationContextProvider.registerBeanIntoApplicationContext(applicationContext,
-            new GroovyScriptResourceCacheManager(), ScriptResourceCacheManager.BEAN_NAME);
-        ApplicationContextProvider.getScriptResourceCacheManager()
-            .ifPresent(ScriptResourceCacheManager::clear);
-    }
-
+    
     @Test
-    public void verifyAttributeMappingWorksForCollections() throws IOException {
+    void verifyAttributeMappingWorksForCollections() throws Throwable {
+        val file = Files.createTempFile("attr", ".json").toFile();
         val map = new TreeMap();
         map.put("test1", "newTest1");
         map.put("test2", Stream.of("newTest2", "DaTest2").collect(Collectors.toList()));
-        val policyWritten = new ReturnMappedAttributeReleasePolicy(map);
-        MAPPER.writeValue(JSON_FILE, policyWritten);
-        val policyRead = MAPPER.readValue(JSON_FILE, ReturnMappedAttributeReleasePolicy.class);
+        val policyWritten = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(map);
+        MAPPER.writeValue(file, policyWritten);
+        val policyRead = MAPPER.readValue(file, ReturnMappedAttributeReleasePolicy.class);
         assertEquals(policyWritten, policyRead);
 
         val mapValues = new HashMap<String, List<Object>>();
@@ -91,6 +79,7 @@ public class ReturnMappedAttributeReleasePolicyTests {
 
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAttributesTestUtils.getService())
             .principal(principal)
             .build();
@@ -101,29 +90,31 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifySerializeAndReturnMappedAttributeReleasePolicyToJson() throws IOException {
+    void verifySerializeAndReturnMappedAttributeReleasePolicyToJson() throws Throwable {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         allowedAttributes.put("keyOne", "valueOne");
-        val wrap = CollectionUtils.<String, Object>wrap(allowedAttributes);
-        val policyWritten = new ReturnMappedAttributeReleasePolicy(wrap);
+        val wrap = CollectionUtils.wrap(allowedAttributes);
+        val policyWritten = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(wrap);
 
-        MAPPER.writeValue(JSON_FILE, policyWritten);
-        val policyRead = MAPPER.readValue(JSON_FILE, ReturnMappedAttributeReleasePolicy.class);
+        val file = Files.createTempFile("attr", ".json").toFile();
+        MAPPER.writeValue(file, policyWritten);
+        val policyRead = MAPPER.readValue(file, ReturnMappedAttributeReleasePolicy.class);
         assertEquals(policyWritten, policyRead);
     }
 
     @Test
-    public void verifyInlinedGroovyAttributes() {
+    void verifyInlinedGroovyAttributes() throws Throwable {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         allowedAttributes.put("attr1", "groovy { logger.debug('Running script...'); return 'DOMAIN\\\\' + attributes['uid'][0] }");
-        val wrap = CollectionUtils.<String, Object>wrap(allowedAttributes);
-        val policyWritten = new ReturnMappedAttributeReleasePolicy(wrap);
+        val wrap = CollectionUtils.wrap(allowedAttributes);
+        val policyWritten = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(wrap);
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policyWritten);
         val principalAttributes = new HashMap<String, List<Object>>();
         principalAttributes.put("uid", List.of(CoreAttributesTestUtils.CONST_USERNAME));
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
@@ -133,11 +124,11 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifyInlinedGroovyMultipleAttributes() {
+    void verifyInlinedGroovyMultipleAttributes() throws Throwable {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         allowedAttributes.put("attr1", "groovy { logger.debug('Running script...'); return ['one', 'two'] }");
-        val wrap = CollectionUtils.<String, Object>wrap(allowedAttributes);
-        val policyWritten = new ReturnMappedAttributeReleasePolicy(wrap);
+        val wrap = CollectionUtils.wrap(allowedAttributes);
+        val policyWritten = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(wrap);
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policyWritten);
         val principalAttributes = new HashMap<String, List<Object>>();
@@ -145,16 +136,17 @@ public class ReturnMappedAttributeReleasePolicyTests {
 
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
         val result = policyWritten.getAttributes(releasePolicyContext);
         assertTrue(result.containsKey("attr1"));
-        assertEquals(2, Collection.class.cast(result.get("attr1")).size());
+        assertEquals(2, ((Collection) result.get("attr1")).size());
     }
 
     @Test
-    public void verifyExternalGroovyAttributes() throws Exception {
+    void verifyExternalGroovyAttributes() throws Throwable {
         val file = new File(FileUtils.getTempDirectoryPath(), "script.groovy");
         val script = IOUtils.toString(
             new ClassPathResource("GroovyMappedAttribute.groovy").getInputStream(), StandardCharsets.UTF_8);
@@ -162,14 +154,15 @@ public class ReturnMappedAttributeReleasePolicyTests {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         val attributeName = UUID.randomUUID().toString();
         allowedAttributes.put(attributeName, "file:" + file.getCanonicalPath());
-        val wrap = CollectionUtils.<String, Object>wrap(allowedAttributes);
-        val policyWritten = new ReturnMappedAttributeReleasePolicy(wrap);
+        val wrap = CollectionUtils.wrap(allowedAttributes);
+        val policyWritten = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(wrap);
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policyWritten);
         val principalAttributes = new HashMap<String, List<Object>>();
         principalAttributes.put("uid", List.of(CoreAttributesTestUtils.CONST_USERNAME));
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
@@ -182,17 +175,18 @@ public class ReturnMappedAttributeReleasePolicyTests {
 
 
     @Test
-    public void verifyMappingWithoutAttributeValue() {
+    void verifyMappingWithoutAttributeValue() throws Throwable {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         val mappedAttribute = "urn:oid:0.9.2342.19200300.100.1.3";
         allowedAttributes.put("email", mappedAttribute);
-        val policy = new ReturnMappedAttributeReleasePolicy(CollectionUtils.wrap(allowedAttributes));
+        val policy = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(CollectionUtils.wrap(allowedAttributes));
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policy);
         val principalAttributes = new HashMap<String, List<Object>>();
         principalAttributes.put("uid", List.of(CoreAttributesTestUtils.CONST_USERNAME));
         var releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
@@ -204,6 +198,7 @@ public class ReturnMappedAttributeReleasePolicyTests {
 
         releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
@@ -213,18 +208,19 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifyClasspathGroovy() {
+    void verifyClasspathGroovy() throws Throwable {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         val attributeName = UUID.randomUUID().toString();
         allowedAttributes.put(attributeName, "classpath:GroovyMappedAttribute.groovy");
-        val wrap = CollectionUtils.<String, Object>wrap(allowedAttributes);
-        val policyWritten = new ReturnMappedAttributeReleasePolicy(wrap);
+        val wrap = CollectionUtils.wrap(allowedAttributes);
+        val policyWritten = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(wrap);
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policyWritten);
         val principalAttributes = new HashMap<String, List<Object>>();
         principalAttributes.put("uid", List.of(CoreAttributesTestUtils.CONST_USERNAME));
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
@@ -237,19 +233,20 @@ public class ReturnMappedAttributeReleasePolicyTests {
 
 
     @Test
-    public void verifyInlinedGroovyWithCache() {
+    void verifyInlinedGroovyWithCache() throws Throwable {
         val allowed1 = ArrayListMultimap.<String, Object>create();
         val attributeName = UUID.randomUUID().toString();
         allowed1.put(attributeName, "groovy { return 'v1' }");
-        val p1 = new ReturnMappedAttributeReleasePolicy(CollectionUtils.wrap(allowed1));
+        val p1 = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(CollectionUtils.wrap(allowed1));
 
-        val service1 = CoreAttributesTestUtils.getRegisteredService();
+        val service1 = CoreAttributesTestUtils.getRegisteredService(UUID.randomUUID().toString());
         when(service1.getAttributeReleasePolicy()).thenReturn(p1);
 
         val attributes = new HashMap<String, List<Object>>();
         attributes.put("uid", List.of(CoreAttributesTestUtils.CONST_USERNAME));
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(service1)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, attributes))
             .build();
@@ -258,17 +255,17 @@ public class ReturnMappedAttributeReleasePolicyTests {
         assertTrue(result1.containsValue(List.of("v1")));
 
         val manager = ApplicationContextProvider.getScriptResourceCacheManager().get();
-        val key = manager.getKeys().iterator().next();
-        assertEquals("v1", manager.get(key).execute(ArrayUtils.EMPTY_OBJECT_ARRAY, String.class));
+        assertTrue(manager.getKeys().stream().allMatch(key -> manager.get(key) != null));
 
         val allowed2 = ArrayListMultimap.<String, Object>create();
         allowed2.put(attributeName, "groovy { return 'v2' }");
-        val p2 = new ReturnMappedAttributeReleasePolicy(CollectionUtils.wrap(allowed2));
+        val p2 = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(CollectionUtils.wrap(allowed2));
 
         val service2 = CoreAttributesTestUtils.getRegisteredService();
         when(service2.getAttributeReleasePolicy()).thenReturn(p2);
         val releasePolicyContext2 = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(service2)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, attributes))
             .build();
@@ -278,12 +275,12 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifyExternalGroovyWithCache() {
+    void verifyExternalGroovyWithCache() throws Throwable {
         val allowed1 = ArrayListMultimap.<String, Object>create();
         val attributeName = UUID.randomUUID().toString();
 
         allowed1.put(attributeName, "classpath:GroovyMappedAttribute.groovy");
-        val p1 = new ReturnMappedAttributeReleasePolicy(CollectionUtils.wrap(allowed1));
+        val p1 = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(CollectionUtils.wrap(allowed1));
 
         val service1 = CoreAttributesTestUtils.getRegisteredService();
         when(service1.getAttributeReleasePolicy()).thenReturn(p1);
@@ -292,6 +289,7 @@ public class ReturnMappedAttributeReleasePolicyTests {
         attributes.put("uid", List.of(CoreAttributesTestUtils.CONST_USERNAME));
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(service1)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, attributes))
             .build();
@@ -302,9 +300,9 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifyMappedExisting() {
+    void verifyMappedExisting() throws Throwable {
         val allowed1 = CollectionUtils.<String, Object>wrap("uid", "my-userid");
-        val p1 = new ReturnMappedAttributeReleasePolicy(allowed1);
+        val p1 = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(allowed1);
         val service1 = CoreAttributesTestUtils.getRegisteredService();
         when(service1.getAttributeReleasePolicy()).thenReturn(p1);
 
@@ -312,6 +310,7 @@ public class ReturnMappedAttributeReleasePolicyTests {
         attributes.put("uid", List.of(CoreAttributesTestUtils.CONST_USERNAME));
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(service1)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, attributes))
             .build();
@@ -328,27 +327,28 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifyRequestedDefinitions() {
+    void verifyRequestedDefinitions() {
         val allowed1 = CollectionUtils.<String, Object>wrap("uid", "my-userid");
-        val policy = new ReturnMappedAttributeReleasePolicy(allowed1);
+        val policy = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(allowed1);
 
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(CoreAuthenticationTestUtils.getRegisteredService())
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAuthenticationTestUtils.getPrincipal())
+            .applicationContext(applicationContext)
             .build();
         val attributes = policy.determineRequestedAttributeDefinitions(releasePolicyContext);
         assertTrue(attributes.containsAll(policy.getAllowedAttributes().keySet()));
     }
 
     @Test
-    public void verifyInlinedGroovyFailsPartially() {
+    void verifyInlinedGroovyFailsPartially() throws Throwable {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         allowedAttributes.put("attr1", "groovy { $bad-script-here$ }");
         allowedAttributes.put("uid", "userId");
 
-        val wrap = CollectionUtils.<String, Object>wrap(allowedAttributes);
-        val policyWritten = new ReturnMappedAttributeReleasePolicy(wrap);
+        val wrap = CollectionUtils.wrap(allowedAttributes);
+        val policyWritten = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(wrap);
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policyWritten);
         val principalAttributes = new HashMap<String, List<Object>>();
@@ -356,6 +356,7 @@ public class ReturnMappedAttributeReleasePolicyTests {
 
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
+            .applicationContext(applicationContext)
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
@@ -365,14 +366,14 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifyExternalGroovyFailsPartially() throws Exception {
+    void verifyExternalGroovyFailsPartially() throws Throwable {
         val allowed1 = ArrayListMultimap.<String, Object>create();
         val file = File.createTempFile("something", ".groovy");
         FileUtils.write(file, "bad-data", StandardCharsets.UTF_8);
         allowed1.put("attr1", "file:" + file.getCanonicalPath());
         allowed1.put("uid", "userId");
 
-        val policy = new ReturnMappedAttributeReleasePolicy(CollectionUtils.wrap(allowed1));
+        val policy = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(CollectionUtils.wrap(allowed1));
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policy);
         val principalAttributes = new HashMap<String, List<Object>>();
@@ -381,6 +382,7 @@ public class ReturnMappedAttributeReleasePolicyTests {
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(registeredService)
             .service(CoreAuthenticationTestUtils.getService())
+            .applicationContext(applicationContext)
             .principal(CoreAttributesTestUtils.getPrincipal(CoreAttributesTestUtils.CONST_USERNAME, principalAttributes))
             .build();
         val result = policy.getAttributes(releasePolicyContext);
@@ -390,22 +392,21 @@ public class ReturnMappedAttributeReleasePolicyTests {
     }
 
     @Test
-    public void verifyConcurrentScript() throws Exception {
+    void verifyConcurrentScript() throws Throwable {
         val allowedAttributes = ArrayListMultimap.<String, Object>create();
         allowedAttributes.put("taxId", "groovy { attributes['fiscalNumber'][0] }");
         allowedAttributes.put("uid", "uid");
 
-        val wrap = CollectionUtils.<String, Object>wrap(allowedAttributes);
-        val policy = new ReturnMappedAttributeReleasePolicy(wrap);
+        val wrap = CollectionUtils.wrap(allowedAttributes);
+        val policy = new ReturnMappedAttributeReleasePolicy().setAllowedAttributes(wrap);
         val registeredService = CoreAttributesTestUtils.getRegisteredService();
         when(registeredService.getAttributeReleasePolicy()).thenReturn(policy);
 
-        val service = Executors.newFixedThreadPool(50);
-        IntStream.range(0, 1000)
-            .forEach(Unchecked.intConsumer(count -> {
-                val future = service.submit(() -> {
+        try (val service = Executors.newFixedThreadPool(50)) {
+            IntStream.range(0, 1000).forEach(Unchecked.intConsumer(count -> {
+                val future = service.submit(Unchecked.runnable(() -> {
                     val principalAttributes = new HashMap<String, List<Object>>();
-                    val uid = "user" + count;
+                    val uid = "user%d".formatted(count);
                     principalAttributes.put("uid", List.of(uid));
                     principalAttributes.put("fiscalNumber", List.of(uid + '-' + RandomUtils.randomAlphabetic(9)));
                     val principal = CoreAttributesTestUtils.getPrincipal(uid, principalAttributes);
@@ -413,31 +414,36 @@ public class ReturnMappedAttributeReleasePolicyTests {
                     val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
                         .registeredService(registeredService)
                         .service(CoreAuthenticationTestUtils.getService())
+                        .applicationContext(applicationContext)
                         .principal(principal)
                         .build();
                     var result = policy.getAttributes(releasePolicyContext);
                     assertNotNull(result);
                     assertTrue(result.containsKey("uid"));
                     assertTrue(result.containsKey("taxId"));
-                    assertEquals(uid, result.get("uid").get(0));
-                    assertTrue(result.get("taxId").get(0).toString().contains(uid));
-                });
+                    assertEquals(uid, result.get("uid").getFirst());
+                    assertTrue(result.get("taxId").getFirst().toString().contains(uid));
+                }));
                 future.get();
             }));
-        service.awaitTermination(5, TimeUnit.SECONDS);
+            service.awaitTermination(5, TimeUnit.SECONDS);
+        }
     }
 
     @Test
-    public void verifyChainDependingOnPreviousAttributes() {
-        val policy1 = new ReturnMappedAttributeReleasePolicy(CollectionUtils.wrap("uid", "my-userid"));
+    void verifyChainDependingOnPreviousAttributes() {
+        val policy1 = new ReturnMappedAttributeReleasePolicy();
+        policy1.setAllowedAttributes(CollectionUtils.wrap("uid", "my-userid"));
         policy1.setOrder(1);
-        val policy2 = new ReturnMappedAttributeReleasePolicy(CollectionUtils.wrap("new-uid", "groovy {attributes['my-userid'][0]+'-new'}"));
+        val policy2 = new ReturnMappedAttributeReleasePolicy();
+        policy2.setAllowedAttributes(CollectionUtils.wrap("new-uid", "groovy {attributes['my-userid'][0]+'-new'}"));
         policy2.setOrder(2);
 
         val releasePolicyContext = RegisteredServiceAttributeReleasePolicyContext.builder()
             .registeredService(CoreAuthenticationTestUtils.getRegisteredService())
             .service(CoreAuthenticationTestUtils.getService())
             .principal(CoreAuthenticationTestUtils.getPrincipal())
+            .applicationContext(applicationContext)
             .build();
 
         val chain = new ChainingAttributeReleasePolicy();
@@ -445,7 +451,8 @@ public class ReturnMappedAttributeReleasePolicyTests {
 
         val attributes = chain.getAttributes(releasePolicyContext);
         assertEquals(2, attributes.size());
-        assertEquals("test", attributes.get("my-userid").get(0));
-        assertEquals("test-new", attributes.get("new-uid").get(0));
+        assertEquals("test", attributes.get("my-userid").getFirst());
+        assertEquals("test-new", attributes.get("new-uid").getFirst());
     }
+
 }
