@@ -1,31 +1,34 @@
 package org.apereo.cas.configuration;
 
 import org.apereo.cas.configuration.api.CasConfigurationPropertiesSourceLocator;
-import org.apereo.cas.configuration.loader.ConfigurationPropertiesLoaderFactory;
 import org.apereo.cas.util.CollectionUtils;
+import org.apereo.cas.util.crypto.CipherExecutor;
 import org.apereo.cas.util.function.FunctionUtils;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.jooq.lambda.Unchecked;
 import org.springframework.core.env.CompositePropertySource;
 import org.springframework.core.env.Environment;
+import org.springframework.core.env.PropertiesPropertySource;
 import org.springframework.core.env.PropertySource;
+import org.springframework.core.env.StandardEnvironment;
+import org.springframework.core.env.SystemEnvironmentPropertySource;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.ResourceLoader;
-
 import java.io.File;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 /**
  * This is {@link DefaultCasConfigurationPropertiesSourceLocator}.
  * <p>
- * Note: The order of the elements in {@link #EXTENSIONS} is important, last one overrides previous ones.
+ * Note: The order of the elements in {@link #EXTENSIONS} is important, first one overrides previous ones.
  *
  * @author Misagh Moayyed
  * @since 5.3.0
@@ -33,21 +36,31 @@ import java.util.stream.Collectors;
 @Slf4j
 @RequiredArgsConstructor
 public class DefaultCasConfigurationPropertiesSourceLocator implements CasConfigurationPropertiesSourceLocator {
-    private static final List<String> EXTENSIONS = Arrays.asList("properties", "yml", "yaml");
+    private static final List<String> EXTENSIONS = Arrays.asList("yml", "yaml", "properties");
 
     private static final List<String> PROFILE_PATTERNS = Arrays.asList("application-%s.%s", "%s.%s");
 
-    private final CasConfigurationPropertiesEnvironmentManager casConfigurationPropertiesEnvironmentManager;
-
-    private final ConfigurationPropertiesLoaderFactory configurationPropertiesLoaderFactory;
-
+    private final CipherExecutor<String, String> casConfigurationCipherExecutor;
+    
+    /**
+     * Returns a property source composed of system properties and environment variables.
+     * <p>
+     * System properties take precedence over environment variables (similarly to spring boot behaviour).
+     */
+    private static PropertySource<?> loadEnvironmentAndSystemProperties() {
+        val source = new CompositePropertySource("environmentAndSystemProperties");
+        source.addPropertySource(new PropertiesPropertySource(StandardEnvironment.SYSTEM_PROPERTIES_PROPERTY_SOURCE_NAME, System.getProperties()));
+        source.addPropertySource(new SystemEnvironmentPropertySource(StandardEnvironment.SYSTEM_ENVIRONMENT_PROPERTY_SOURCE_NAME, (Map) System.getenv()));
+        return source;
+    }
 
     /**
      * Adding items to composite property source which contains
      * property sources processed in order, first one wins.
-     * First Priority: Configuration files in config dir,
+     * First Priority: System properties and environment variables,
+     * Second Priority: Configuration files in config dir,
      * profiles override non-profiles, last profile overrides first
-     * Second Priority: {@code classpath:/application.yml}
+     * Third Priority: {@code classpath:/application.yml}
      *
      * @param environment    the environment
      * @param resourceLoader the resource loader
@@ -56,21 +69,24 @@ public class DefaultCasConfigurationPropertiesSourceLocator implements CasConfig
     @Override
     public Optional<PropertySource<?>> locate(final Environment environment, final ResourceLoader resourceLoader) {
         val compositePropertySource = new CompositePropertySource("casCompositePropertySource");
-        val config = casConfigurationPropertiesEnvironmentManager.getStandaloneProfileConfigurationDirectory(environment);
+        compositePropertySource.addPropertySource(loadEnvironmentAndSystemProperties());
+        val config = CasConfigurationPropertiesSourceLocator.getStandaloneProfileConfigurationDirectory(environment);
         LOGGER.debug("Located CAS standalone configuration directory at [{}]", config);
         if (config != null && config.isDirectory() && config.exists()) {
             val sourceProfiles = loadSettingsByApplicationProfiles(environment, config);
-            compositePropertySource.addPropertySource(sourceProfiles);
+            if (!sourceProfiles.getPropertySources().isEmpty()) {
+                compositePropertySource.addPropertySource(sourceProfiles);
+            }
         } else {
-            LOGGER.info("Configuration directory [{}] is not a directory or cannot be found at the specific path", config);
+            LOGGER.info("Configuration directory [{}] is not a directory or cannot be found at the specific path",
+                 FunctionUtils.doIfNotNull(config, () -> config, () -> "unspecified").get());
         }
 
-        val sourceYaml = loadEmbeddedYamlOverriddenProperties(resourceLoader, environment);
-        compositePropertySource.addPropertySource(sourceYaml);
+        val embeddedProperties = loadEmbeddedProperties(resourceLoader, environment);
+        compositePropertySource.addPropertySource(embeddedProperties);
 
         return Optional.of(compositePropertySource);
     }
-
 
     /**
      * Make a list of files that will be processed in order where the last one processed wins.
@@ -82,13 +98,13 @@ public class DefaultCasConfigurationPropertiesSourceLocator implements CasConfig
      * <p>
      * Where multiple filenames with same base name and different extensions exist, the priority is yaml, yml, properties.
      */
-    private List<File> getAllPossibleExternalConfigDirFilenames(
+    private static List<File> getAllPossibleExternalConfigDirFilenames(
         final Environment environment,
         final File configDirectory,
         final List<String> profiles) {
-        val applicationName = casConfigurationPropertiesEnvironmentManager.getApplicationName(environment);
-        val configName = casConfigurationPropertiesEnvironmentManager.getConfigurationName(environment);
-        val appNameLowerCase = applicationName.toLowerCase();
+        val applicationName = CasConfigurationPropertiesSourceLocator.getApplicationName(environment);
+        val configName = CasConfigurationPropertiesSourceLocator.getConfigurationName(environment);
+        val appNameLowerCase = applicationName.toLowerCase(Locale.ENGLISH);
         val appConfigNames = CollectionUtils.wrapList("application", appNameLowerCase, applicationName, configName);
 
         val fileNames = appConfigNames
@@ -106,8 +122,7 @@ public class DefaultCasConfigurationPropertiesSourceLocator implements CasConfig
                 .stream()
                 .flatMap(ext -> PROFILE_PATTERNS
                     .stream().map(pattern -> new File(configDirectory, String.format(pattern, profile, ext)))))
-            .filter(File::exists)
-            .collect(Collectors.toList()));
+            .filter(File::exists).toList());
 
         fileNames.addAll(profiles
             .stream()
@@ -121,7 +136,7 @@ public class DefaultCasConfigurationPropertiesSourceLocator implements CasConfig
                 .flatMap(List::stream)
                 .collect(Collectors.toList()))
             .flatMap(List::stream)
-            .collect(Collectors.toList()));
+            .toList());
 
         val groovyFile = new File(configDirectory, appNameLowerCase.concat(".groovy"));
         FunctionUtils.doIf(groovyFile.exists(), o -> fileNames.add(groovyFile)).accept(groovyFile);
@@ -135,8 +150,8 @@ public class DefaultCasConfigurationPropertiesSourceLocator implements CasConfig
      * @param profiles Profiles that are active
      * @return List of files to be processed in order where last one processed overrides others
      */
-    private List<Resource> scanForConfigurationResources(final Environment environment, final File config,
-                                                         final List<String> profiles) {
+    private static List<Resource> scanForConfigurationResources(final Environment environment, final File config,
+                                                                final List<String> profiles) {
         val possibleFiles = getAllPossibleExternalConfigDirFilenames(environment, config, profiles);
         return possibleFiles.stream()
             .filter(File::exists)
@@ -153,40 +168,67 @@ public class DefaultCasConfigurationPropertiesSourceLocator implements CasConfig
      * @param config      Location of config files
      * @return Merged properties
      */
-    private PropertySource<?> loadSettingsByApplicationProfiles(final Environment environment,
-                                                                final File config) {
-        val profiles = ConfigurationPropertiesLoaderFactory.getApplicationProfiles(environment);
+    private CompositePropertySource loadSettingsByApplicationProfiles(final Environment environment, final File config) {
+        val profiles = Arrays.stream(environment.getActiveProfiles()).toList();
         val resources = scanForConfigurationResources(environment, config, profiles);
         val composite = new CompositePropertySource("applicationProfilesCompositeProperties");
         LOGGER.info("Configuration files found at [{}] are [{}] under profile(s) [{}]", config, resources, profiles);
-        resources.forEach(Unchecked.consumer(f -> {
-            LOGGER.debug("Loading configuration file [{}]", f);
-            val loader = configurationPropertiesLoaderFactory.getLoader(f, "applicationProfilesProperties-" + f.getFilename());
-            composite.addFirstPropertySource(loader.load());
-        }));
+        resources.forEach(Unchecked.consumer(resource -> {
+            LOGGER.debug("Loading configuration file [{}]", resource);
 
+            val configurationLoaders = CasConfigurationPropertiesSourceLocator.getConfigurationPropertiesLoaders();
+            val foundLoader = configurationLoaders
+                .stream()
+                .filter(loader -> loader.supports(resource))
+                .findFirst()
+                .orElseThrow();
+
+            val source = foundLoader.load(resource, environment,
+                "applicationProfilesProperties-" + resource.getFilename(), casConfigurationCipherExecutor);
+            composite.addFirstPropertySource(source);
+
+            
+        }));
         return composite;
     }
 
-    private PropertySource<?> loadEmbeddedYamlOverriddenProperties(final ResourceLoader resourceLoader,
-                                                                   final Environment environment) {
-        val profiles = ConfigurationPropertiesLoaderFactory.getApplicationProfiles(environment);
-        val yamlFiles = profiles.stream()
-            .map(profile -> String.format("classpath:/application-%s.yml", profile))
-            .sorted()
+    protected PropertySource<?> loadEmbeddedProperties(final ResourceLoader resourceLoader,
+                                                     final Environment environment) {
+        val profiles = Arrays.stream(environment.getActiveProfiles()).toList();
+        val configFiles = profiles
+            .stream()
+            .map(profile -> EXTENSIONS.stream()
+                .map(ext -> String.format("classpath:/application-%s.%s", profile, ext))
+                .collect(Collectors.toList()))
+            .flatMap(List::stream)
             .map(resourceLoader::getResource)
             .collect(Collectors.toList());
-        yamlFiles.add(resourceLoader.getResource("classpath:/application.yml"));
 
-        LOGGER.debug("Loading embedded YAML configuration files [{}]", yamlFiles);
+        configFiles.addAll(EXTENSIONS.stream()
+            .map(ext -> String.format("classpath:/application.%s", ext))
+            .map(resourceLoader::getResource).toList());
 
-        val composite = new CompositePropertySource("embeddedYamlOverriddenCompositeProperties");
-        yamlFiles.forEach(resource -> {
-            LOGGER.trace("Loading YAML properties from [{}]", resource);
-            val source = configurationPropertiesLoaderFactory.getLoader(resource,
-                String.format("embeddedYamlOverriddenProperties-%s", resource.getFilename())).load();
-            composite.addPropertySource(source);
-        });
+        LOGGER.debug("Loading embedded configuration files [{}]", configFiles);
+
+        val composite = new CompositePropertySource("embeddedCompositeProperties");
+        val configurationLoaders = CasConfigurationPropertiesSourceLocator.getConfigurationPropertiesLoaders();
+        
+        configFiles
+            .stream()
+            .filter(Resource::exists)
+            .forEach(resource -> {
+                LOGGER.trace("Loading properties from [{}]", resource);
+
+                val foundLoader = configurationLoaders
+                    .stream()
+                    .filter(loader -> loader.supports(resource))
+                    .findFirst()
+                    .orElseThrow();
+
+                val sourceName = String.format("embeddedProperties-%s", resource.getFilename());
+                val source = foundLoader.load(resource, environment, sourceName, casConfigurationCipherExecutor);
+                composite.addPropertySource(source);
+            });
         return composite;
     }
 }
