@@ -1,8 +1,7 @@
 package org.apereo.cas.services;
 
-import org.apereo.cas.ticket.TicketState;
-import org.apereo.cas.util.model.TriStateBoolean;
-
+import org.apereo.cas.configuration.support.TriStateBoolean;
+import org.apereo.cas.ticket.AuthenticationAwareTicket;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
@@ -13,11 +12,10 @@ import lombok.NonNull;
 import lombok.Setter;
 import lombok.ToString;
 import lombok.val;
-
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This is {@link ChainingRegisteredServiceSingleSignOnParticipationPolicy}.
@@ -33,6 +31,7 @@ import java.util.stream.Collectors;
 @NoArgsConstructor
 @JsonIgnoreProperties("order")
 public class ChainingRegisteredServiceSingleSignOnParticipationPolicy implements RegisteredServiceSingleSignOnParticipationPolicy {
+    @Serial
     private static final long serialVersionUID = -2923946898337761319L;
 
     private List<RegisteredServiceSingleSignOnParticipationPolicy> policies = new ArrayList<>(0);
@@ -61,7 +60,13 @@ public class ChainingRegisteredServiceSingleSignOnParticipationPolicy implements
      * @param policy the policy
      */
     public void addPolicies(final @NonNull RegisteredServiceSingleSignOnParticipationPolicy... policy) {
-        policies.addAll(Arrays.stream(policy).collect(Collectors.toList()));
+        policies.addAll(Arrays.stream(policy).toList());
+    }
+
+    @Override
+    public boolean shouldParticipateInSso(final RegisteredService registeredService, final AuthenticationAwareTicket ticketState) {
+        return policies.stream()
+            .allMatch(p -> p.shouldParticipateInSso(registeredService, ticketState));
     }
 
     @JsonIgnore
@@ -72,11 +77,5 @@ public class ChainingRegisteredServiceSingleSignOnParticipationPolicy implements
             .filter(p -> p.getCreateCookieOnRenewedAuthentication() != null)
             .allMatch(p -> p.getCreateCookieOnRenewedAuthentication().isTrue() || p.getCreateCookieOnRenewedAuthentication().isUndefined());
         return TriStateBoolean.fromBoolean(result);
-    }
-
-    @Override
-    public boolean shouldParticipateInSso(final RegisteredService registeredService, final TicketState ticketState) {
-        return policies.stream()
-            .allMatch(p -> p.shouldParticipateInSso(registeredService, ticketState));
     }
 }
