@@ -3,34 +3,37 @@ package org.apereo.cas.services;
 import org.apereo.cas.CasProtocolConstants;
 import org.apereo.cas.authentication.AcceptUsersAuthenticationHandler;
 import org.apereo.cas.authentication.Authentication;
+import org.apereo.cas.authentication.AuthenticationHandler;
+import org.apereo.cas.authentication.AuthenticationResult;
+import org.apereo.cas.authentication.Credential;
 import org.apereo.cas.authentication.DefaultAuthenticationBuilder;
 import org.apereo.cas.authentication.DefaultAuthenticationHandlerExecutionResult;
+import org.apereo.cas.authentication.DefaultAuthenticationResultBuilder;
+import org.apereo.cas.authentication.PrincipalElectionStrategy;
 import org.apereo.cas.authentication.credential.HttpBasedServiceCredential;
 import org.apereo.cas.authentication.credential.UsernamePasswordCredential;
 import org.apereo.cas.authentication.handler.support.SimpleTestUsernamePasswordAuthenticationHandler;
-import org.apereo.cas.authentication.metadata.BasicCredentialMetaData;
 import org.apereo.cas.authentication.principal.AbstractWebApplicationService;
 import org.apereo.cas.authentication.principal.Principal;
 import org.apereo.cas.authentication.principal.PrincipalFactoryUtils;
 import org.apereo.cas.authentication.principal.Service;
 import org.apereo.cas.authentication.principal.WebApplicationServiceFactory;
 import org.apereo.cas.authentication.principal.cache.CachingPrincipalAttributesRepository;
+import org.apereo.cas.authentication.principal.merger.MultivaluedAttributeMerger;
 import org.apereo.cas.configuration.model.core.authentication.PrincipalAttributesCoreProperties;
+import org.apereo.cas.multitenancy.TenantExtractor;
 import org.apereo.cas.services.consent.DefaultRegisteredServiceConsentPolicy;
 import org.apereo.cas.services.support.RegisteredServiceRegexAttributeFilter;
 import org.apereo.cas.util.CollectionUtils;
-
+import org.apereo.cas.util.RandomUtils;
+import org.apereo.cas.util.function.FunctionUtils;
 import com.google.common.base.Splitter;
 import com.google.common.collect.Iterables;
-import lombok.SneakyThrows;
 import lombok.experimental.UtilityClass;
 import lombok.val;
-import org.apache.commons.lang3.RandomUtils;
+import org.jooq.lambda.Unchecked;
 import org.springframework.mock.web.MockHttpServletRequest;
-
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -39,6 +42,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import static org.mockito.Mockito.*;
 
 /**
  * This is {@link RegisteredServiceTestUtils}.
@@ -62,8 +66,9 @@ public class RegisteredServiceTestUtils {
 
     public static HttpBasedServiceCredential getHttpBasedServiceCredentials(final String url) {
         try {
-            return new HttpBasedServiceCredential(new URL(url), RegisteredServiceTestUtils.getRegisteredService(url));
-        } catch (final MalformedURLException e) {
+            val service = (CasModelRegisteredService) RegisteredServiceTestUtils.getRegisteredService(url);
+            return new HttpBasedServiceCredential(new URI(url).toURL(), service);
+        } catch (final Exception e) {
             throw new IllegalArgumentException();
         }
     }
@@ -71,7 +76,7 @@ public class RegisteredServiceTestUtils {
     public static UsernamePasswordCredential getCredentialsWithSameUsernameAndPassword(final String username) {
         val usernamePasswordCredentials = new UsernamePasswordCredential();
         usernamePasswordCredentials.setUsername(username);
-        usernamePasswordCredentials.setPassword(username);
+        usernamePasswordCredentials.assignPassword(username);
 
         return usernamePasswordCredentials;
     }
@@ -79,7 +84,7 @@ public class RegisteredServiceTestUtils {
     public static UsernamePasswordCredential getCredentialsWithDifferentUsernameAndPassword(final String username, final String password) {
         val usernamePasswordCredentials = new UsernamePasswordCredential();
         usernamePasswordCredentials.setUsername(username);
-        usernamePasswordCredentials.setPassword(password);
+        usernamePasswordCredentials.assignPassword(password);
 
         return usernamePasswordCredentials;
     }
@@ -91,7 +96,7 @@ public class RegisteredServiceTestUtils {
     public static AbstractWebApplicationService getService(final String name) {
         val request = new MockHttpServletRequest();
         request.addParameter(CasProtocolConstants.PARAMETER_SERVICE, name);
-        return (AbstractWebApplicationService) new WebApplicationServiceFactory().createService(request);
+        return (AbstractWebApplicationService) new WebApplicationServiceFactory(mock(TenantExtractor.class)).createService(request);
     }
 
     public static Service getService2() {
@@ -123,51 +128,50 @@ public class RegisteredServiceTestUtils {
         return attributes;
     }
 
-    public static AbstractRegisteredService getRegisteredService() {
+    public static BaseWebBasedRegisteredService getRegisteredService() {
         return getRegisteredService(CONST_TEST_URL);
     }
 
-    public static AbstractRegisteredService getRegisteredService(final Map requiredAttributes) {
+    public static BaseWebBasedRegisteredService getRegisteredService(final Map requiredAttributes) {
         return getRegisteredService(CONST_TEST_URL, requiredAttributes);
     }
 
-    @SneakyThrows
-    public static AbstractRegisteredService getRegisteredService(final String id,
-                                                                 final Class<? extends RegisteredService> clazz,
-                                                                 final boolean uniq) {
-        return getRegisteredService(id, clazz, uniq, getTestAttributes());
+    public static <T extends BaseWebBasedRegisteredService> T getRegisteredService(final String id, final Class<T> clazz,
+                                                                                   final boolean uniq) {
+        return Unchecked.supplier(() -> getRegisteredService(id, clazz, uniq, getTestAttributes())).get();
     }
 
-    @SneakyThrows
-    public static AbstractRegisteredService getRegisteredService(final String id,
-                                                                 final Class<? extends RegisteredService> clazz,
-                                                                 final boolean uniq,
-                                                                 final Map requiredAttributes) {
-        val s = (AbstractRegisteredService) clazz.getDeclaredConstructor().newInstance();
-        s.setServiceId(id);
-        s.setEvaluationOrder(1);
+    public static <T extends BaseRegisteredService> T getRegisteredService(
+        final String id, final Class<T> clazz,
+        final boolean uniq, final Map requiredAttributes) throws Exception {
+        val baseRegisteredService = (BaseRegisteredService) clazz.getDeclaredConstructor().newInstance();
+        baseRegisteredService.setServiceId(id);
+        baseRegisteredService.setEvaluationOrder(1);
         if (uniq) {
             val uuid = Iterables.get(Splitter.on('-').split(UUID.randomUUID().toString()), 0);
-            s.setName("TestService" + uuid);
+            baseRegisteredService.setName("TestService" + uuid);
         } else {
-            s.setName(id);
+            baseRegisteredService.setName(id);
         }
-        s.setDescription("Registered service description");
-        s.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy("^https?://.+"));
-        s.setId(RandomUtils.nextInt());
-        s.setTheme("exampleTheme");
-        s.setUsernameAttributeProvider(new PrincipalAttributeRegisteredServiceUsernameProvider("uid"));
+        baseRegisteredService.setDescription("Registered service description");
+        baseRegisteredService.setId(RandomUtils.nextInt());
+        baseRegisteredService.setTheme("exampleTheme");
+        baseRegisteredService.setUsernameAttributeProvider(new PrincipalAttributeRegisteredServiceUsernameProvider("uid"));
         val accessStrategy = new DefaultRegisteredServiceAccessStrategy(true, true);
         accessStrategy.setRequireAllAttributes(true);
         accessStrategy.setRequiredAttributes(requiredAttributes);
         accessStrategy.setUnauthorizedRedirectUrl(new URI("https://www.github.com"));
-        s.setAccessStrategy(accessStrategy);
-        s.setLogo("https://logo.example.org/logo.png");
-        s.setLogoutType(RegisteredServiceLogoutType.BACK_CHANNEL);
-        s.setLogoutUrl("https://sys.example.org/logout.png");
-        s.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy("^http.+"));
+        baseRegisteredService.setAccessStrategy(accessStrategy);
+        baseRegisteredService.setLogo("https://logo.example.org/logo.png");
+        baseRegisteredService.setLogoutType(RegisteredServiceLogoutType.BACK_CHANNEL);
+        baseRegisteredService.setLogoutUrl("https://sys.example.org/logout.png");
 
-        s.setPublicKey(new RegisteredServicePublicKeyImpl("classpath:RSA1024Public.key", "RSA"));
+        if (baseRegisteredService instanceof CasRegisteredService) {
+            val policy = new RegexMatchingRegisteredServiceProxyPolicy();
+            policy.setPattern("^http.+");
+            ((CasRegisteredService) baseRegisteredService).setProxyPolicy(policy);
+        }
+        baseRegisteredService.setPublicKey(new RegisteredServicePublicKeyImpl("classpath:RSA1024Public.key", "RSA"));
 
         val policy = new ReturnAllowedAttributeReleasePolicy();
         policy.setAuthorizedToReleaseCredentialPassword(true);
@@ -178,25 +182,29 @@ public class RegisteredServiceTestUtils {
         policy.setPrincipalAttributesRepository(repo);
         policy.setAttributeFilter(new RegisteredServiceRegexAttributeFilter("https://.+"));
         policy.setAllowedAttributes(new ArrayList<>(getTestAttributes().keySet()));
-        s.setAttributeReleasePolicy(policy);
+        baseRegisteredService.setAttributeReleasePolicy(policy);
 
-        return s;
+        return (T) baseRegisteredService;
     }
 
-    public static AbstractRegisteredService getRegisteredService(final String id, final Class<? extends RegisteredService> clazz) {
+    public static <T extends BaseWebBasedRegisteredService> T getRegisteredService(final String id, final Class<T> clazz) {
         return getRegisteredService(id, clazz, true);
     }
 
-    public static AbstractRegisteredService getRegisteredService(final String id) {
-        return getRegisteredService(id, RegexRegisteredService.class, true);
+    public static CasRegisteredService getRegisteredService(final String id) {
+        return getRegisteredService(id, CasRegisteredService.class, true);
     }
 
-    public static AbstractRegisteredService getRegisteredService(final String id, final boolean uniq) {
-        return getRegisteredService(id, RegexRegisteredService.class, uniq);
+    public static CasRegisteredService getRegisteredService(final String id, final boolean uniq) {
+        return getRegisteredService(id, CasRegisteredService.class, uniq);
     }
 
-    public static AbstractRegisteredService getRegisteredService(final String id, final Map requiredAttributes) {
-        return getRegisteredService(id, RegexRegisteredService.class, true, requiredAttributes);
+    public static CasRegisteredService getRegisteredService(final String id, final Map requiredAttributes) {
+        return Unchecked.supplier(() -> getRegisteredService(id, CasRegisteredService.class, true, requiredAttributes)).get();
+    }
+
+    public static Principal getPrincipal(final Map<String, List<Object>> attributes) {
+        return getPrincipal(CONST_USERNAME, attributes);
     }
 
     public static Principal getPrincipal() {
@@ -208,7 +216,7 @@ public class RegisteredServiceTestUtils {
     }
 
     public static Principal getPrincipal(final String name, final Map<String, List<Object>> attributes) {
-        return PrincipalFactoryUtils.newPrincipalFactory().createPrincipal(name, attributes);
+        return FunctionUtils.doUnchecked(() -> PrincipalFactoryUtils.newPrincipalFactory().createPrincipal(name, attributes));
     }
 
     public static Authentication getAuthentication() {
@@ -229,16 +237,28 @@ public class RegisteredServiceTestUtils {
 
     public static Authentication getAuthentication(final Principal principal, final Map<String, List<Object>> attributes) {
         val handler = new SimpleTestUsernamePasswordAuthenticationHandler();
-        val meta = new BasicCredentialMetaData(new UsernamePasswordCredential());
+        val credential = new UsernamePasswordCredential();
         return new DefaultAuthenticationBuilder(principal)
-            .addCredential(meta)
-            .addSuccess("testHandler", new DefaultAuthenticationHandlerExecutionResult(handler, meta))
+            .addCredential(credential)
+            .addSuccess("testHandler", new DefaultAuthenticationHandlerExecutionResult(handler, credential))
             .setAttributes(attributes)
             .build();
     }
 
-    @SneakyThrows
-    public static List<RegisteredService> getRegisteredServicesForTests() {
+    public static Authentication getAuthentication(final Credential credential) {
+        return new DefaultAuthenticationBuilder(getPrincipal(credential.getId())).addCredential(credential).build();
+    }
+    
+    public static Authentication getAuthentication(final String principal, final AuthenticationHandler handler,
+                                                   final Credential credential, final Map<String, List<Object>> attributes) {
+        return new DefaultAuthenticationBuilder(getPrincipal(principal))
+            .addCredential(credential)
+            .addSuccess(handler.getName(), new DefaultAuthenticationHandlerExecutionResult(handler, credential))
+            .setAttributes(attributes)
+            .build();
+    }
+
+    public static List<RegisteredService> getRegisteredServicesForTests() throws Exception {
         val list = new ArrayList<RegisteredService>();
         val svc = RegisteredServiceTestUtils.getRegisteredService("testencryption$");
         val policy = new ReturnAllowedAttributeReleasePolicy();
@@ -275,7 +295,7 @@ public class RegisteredServiceTestUtils {
 
         val svc5 = RegisteredServiceTestUtils.getRegisteredService("(https://)*google.com$");
         svc5.setEvaluationOrder(1);
-        svc5.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy(".+"));
+        svc5.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy().setPattern(".+"));
         svc5.setPublicKey(new RegisteredServicePublicKeyImpl("classpath:keys/RSA4096Public.key", "RSA"));
         val policy1 = new ReturnAllowedAttributeReleasePolicy();
         policy1.setAuthorizedToReleaseCredentialPassword(true);
@@ -332,7 +352,7 @@ public class RegisteredServiceTestUtils {
         list.add(svc12);
 
         val svc13 = RegisteredServiceTestUtils.getRegisteredService("^http://www.jasig.org.+");
-        svc13.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy(".+"));
+        svc13.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy().setPattern(".+"));
         svc13.setAccessStrategy(new DefaultRegisteredServiceAccessStrategy(new HashMap<>()));
         svc13.setUsernameAttributeProvider(new DefaultRegisteredServiceUsernameProvider());
         list.add(svc13);
@@ -343,7 +363,7 @@ public class RegisteredServiceTestUtils {
         list.add(svc14);
 
         val svc15 = RegisteredServiceTestUtils.getRegisteredService("proxyService");
-        svc15.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy("^https://.+"));
+        svc15.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy().setPattern("^https://.+"));
         svc15.setAccessStrategy(new DefaultRegisteredServiceAccessStrategy(new HashMap<>()));
         svc15.setUsernameAttributeProvider(new DefaultRegisteredServiceUsernameProvider());
         list.add(svc15);
@@ -409,7 +429,7 @@ public class RegisteredServiceTestUtils {
         list.add(svc23);
 
         val svc24 = RegisteredServiceTestUtils.getRegisteredService("https://www.casinthecloud.com");
-        svc24.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy(".+"));
+        svc24.setProxyPolicy(new RegexMatchingRegisteredServiceProxyPolicy().setPattern(".+"));
         svc24.setPublicKey(new RegisteredServicePublicKeyImpl("classpath:keys/RSA4096Public.key", "RSA"));
         val policy24 = new ReturnAllowedAttributeReleasePolicy();
         policy24.setAuthorizedToReleaseCredentialPassword(true);
@@ -421,13 +441,28 @@ public class RegisteredServiceTestUtils {
         list.add(svc24);
 
         val svc25 = RegisteredServiceTestUtils.getRegisteredService("accessStrategyMapped");
-        svc25.setAttributeReleasePolicy(new ReturnMappedAttributeReleasePolicy(
-            Map.of("sAMAccountName", "uid",
+        svc25.setAttributeReleasePolicy(new ReturnMappedAttributeReleasePolicy()
+            .setAllowedAttributes(Map.of("sAMAccountName", "uid",
                 "mail", "groovy { return attributes['sAMAccountName'][0] + '@example.org'}")));
         svc25.setAccessStrategy(new DefaultRegisteredServiceAccessStrategy(
             Map.of("mail", Set.of(".*"))));
         list.add(svc25);
 
         return list;
+    }
+
+    /**
+     * Gets authentication result.
+     *
+     * @return the authentication result
+     */
+    public static AuthenticationResult getAuthenticationResult(final String username) {
+        return FunctionUtils.doUnchecked(() -> {
+            val authentication = getAuthentication(username);
+            val strategy = mock(PrincipalElectionStrategy.class);
+            when(strategy.getAttributeMerger()).thenReturn(new MultivaluedAttributeMerger());
+            when(strategy.nominate(anyCollection(), anyMap())).thenReturn(authentication.getPrincipal());
+            return new DefaultAuthenticationResultBuilder(strategy).collect(authentication).build();
+        });
     }
 }
