@@ -10,11 +10,11 @@ import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 import org.apereo.inspektr.audit.annotation.Audit;
 
-import javax.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequest;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This is {@link ChainingCasProtocolValidationSpecification}.
@@ -42,12 +42,18 @@ public class ChainingCasProtocolValidationSpecification implements CasProtocolVa
         if (this.canBeSatisfiedByAnySpecification) {
             return this.specifications
                 .stream()
-                .peek(s -> s.setRenew(this.renew))
-                .anyMatch(s -> s.isSatisfiedBy(assertion, request));
+                .peek(spec -> spec.setRenew(this.renew))
+                .anyMatch(spec -> spec.isSatisfiedBy(assertion, request));
         }
         return this.specifications.stream()
-            .peek(s -> s.setRenew(this.renew))
-            .allMatch(s -> s.isSatisfiedBy(assertion, request));
+            .peek(spec -> spec.setRenew(this.renew))
+            .allMatch(spec -> spec.isSatisfiedBy(assertion, request));
+    }
+
+    @Override
+    public void reset() {
+        this.specifications.forEach(CasProtocolValidationSpecification::reset);
+        setRenew(false);
     }
 
     /**
@@ -65,7 +71,7 @@ public class ChainingCasProtocolValidationSpecification implements CasProtocolVa
      * @param policies the policies
      */
     public void addSpecifications(final CasProtocolValidationSpecification... policies) {
-        this.specifications.addAll(Arrays.stream(policies).collect(Collectors.toList()));
+        this.specifications.addAll(Arrays.stream(policies).toList());
     }
 
     /**
@@ -75,11 +81,5 @@ public class ChainingCasProtocolValidationSpecification implements CasProtocolVa
      */
     public int size() {
         return specifications.size();
-    }
-
-    @Override
-    public void reset() {
-        this.specifications.forEach(CasProtocolValidationSpecification::reset);
-        setRenew(false);
     }
 }
