@@ -3,8 +3,8 @@ package org.apereo.cas.web.flow.configurer;
 import org.apereo.cas.configuration.CasConfigurationProperties;
 import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.LoggingUtils;
+import org.apereo.cas.util.function.FunctionUtils;
 import org.apereo.cas.web.flow.CasWebflowConfigurer;
-
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -12,6 +12,7 @@ import lombok.Setter;
 import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.binding.convert.service.RuntimeBindingConversionExecutor;
 import org.springframework.binding.expression.Expression;
@@ -19,8 +20,10 @@ import org.springframework.binding.expression.spel.SpringELExpressionParser;
 import org.springframework.binding.expression.support.FluentParserContext;
 import org.springframework.binding.expression.support.LiteralExpression;
 import org.springframework.binding.mapping.Mapper;
+import org.springframework.binding.mapping.Mapping;
 import org.springframework.binding.mapping.impl.DefaultMapper;
 import org.springframework.binding.mapping.impl.DefaultMapping;
+import org.springframework.binding.mapping.impl.DefaultMappingContext;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.expression.BeanExpressionContextAccessor;
 import org.springframework.context.expression.EnvironmentAccessor;
@@ -38,6 +41,7 @@ import org.springframework.webflow.action.ViewFactoryActionAdapter;
 import org.springframework.webflow.config.FlowDefinitionRegistryBuilder;
 import org.springframework.webflow.definition.StateDefinition;
 import org.springframework.webflow.definition.registry.FlowDefinitionRegistry;
+import org.springframework.webflow.engine.ActionList;
 import org.springframework.webflow.engine.ActionState;
 import org.springframework.webflow.engine.DecisionState;
 import org.springframework.webflow.engine.EndState;
@@ -46,6 +50,7 @@ import org.springframework.webflow.engine.FlowExecutionExceptionHandler;
 import org.springframework.webflow.engine.FlowVariable;
 import org.springframework.webflow.engine.SubflowAttributeMapper;
 import org.springframework.webflow.engine.SubflowState;
+import org.springframework.webflow.engine.TargetStateResolver;
 import org.springframework.webflow.engine.Transition;
 import org.springframework.webflow.engine.TransitionCriteria;
 import org.springframework.webflow.engine.TransitionableState;
@@ -70,7 +75,6 @@ import org.springframework.webflow.expression.spel.FlowVariablePropertyAccessor;
 import org.springframework.webflow.expression.spel.MapAdaptablePropertyAccessor;
 import org.springframework.webflow.expression.spel.MessageSourcePropertyAccessor;
 import org.springframework.webflow.expression.spel.ScopeSearchingPropertyAccessor;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -90,6 +94,8 @@ import java.util.Objects;
 @RequiredArgsConstructor(access = AccessLevel.PROTECTED)
 @ToString(of = "name")
 public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigurer {
+
+
     /**
      * Flow builder services.
      */
@@ -128,16 +134,14 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
 
     @Override
     public void initialize() {
-        try {
+        FunctionUtils.doAndHandle(o -> {
             LOGGER.trace("Initializing CAS webflow configuration...");
             if (casProperties.getWebflow().getAutoConfiguration().isEnabled()) {
                 doInitialize();
             } else {
                 LOGGER.info("Webflow auto-configuration is disabled for [{}]", getClass().getName());
             }
-        } catch (final Exception e) {
-            LoggingUtils.error(LOGGER, e);
-        }
+        }, throwable -> null).accept(this);
     }
 
     @Override
@@ -176,10 +180,30 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
 
     @Override
     public Transition createTransition(final Expression criteriaOutcomeExpression,
-                                       final String targetState,
+                                       final String targetState, final Action... actions) {
+        return createTransition(criteriaOutcomeExpression,
+            StringUtils.isNotBlank(targetState) ? new DefaultTargetStateResolver(targetState) : null,
+            actions);
+    }
+
+    @Override
+    public Transition createTransition(final String criteriaOutcomeExpression,
+                                       final TargetStateResolver targetStateResolver) {
+        return createTransition(new LiteralExpression(criteriaOutcomeExpression), targetStateResolver, EMPTY_ACTIONS_ARRAY);
+    }
+
+    @Override
+    public Transition createTransition(final Expression criteriaOutcomeExpression,
+                                       final TargetStateResolver targetStateResolver) {
+        return createTransition(criteriaOutcomeExpression, targetStateResolver, EMPTY_ACTIONS_ARRAY);
+    }
+
+    @Override
+    public Transition createTransition(final Expression criteriaOutcomeExpression,
+                                       final TargetStateResolver targetStateResolver,
                                        final Action... actions) {
         val criteria = getTransitionCriteriaForExpression(criteriaOutcomeExpression);
-        val transition = new Transition(criteria, StringUtils.isNotBlank(targetState) ? new DefaultTargetStateResolver(targetState) : null);
+        val transition = new Transition(criteria, targetStateResolver);
         if (actions != null && actions.length > 0) {
             val transitionActionCriteria = Arrays.stream(actions)
                 .map(ActionTransitionCriteria::new)
@@ -220,7 +244,7 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
             return null;
         }
         val ctx = new FluentParserContext();
-        val action = this.flowBuilderServices.getExpressionParser().parseExpression(expression, ctx);
+        val action = flowBuilderServices.getExpressionParser().parseExpression(expression, ctx);
         val newAction = new EvaluateAction(action, null);
         LOGGER.trace("Created evaluate action for expression [{}]", action.getExpressionString());
         return newAction;
@@ -228,12 +252,13 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
 
     @Override
     public ActionState createActionState(final Flow flow, final String name) {
-        return createActionState(flow, name, new Action[]{});
+        return createActionState(flow, name, EMPTY_ACTIONS_ARRAY);
     }
 
     @Override
-    public ActionState createActionState(final Flow flow, final String name, final String action) {
-        return createActionState(flow, name, createEvaluateAction(action));
+    public ActionState createActionState(final Flow flow, final String name, final String... action) {
+        val actionList = Arrays.stream(action).map(this::createEvaluateAction).toList();
+        return createActionState(flow, name, actionList.toArray(Action[]::new));
     }
 
     @Override
@@ -334,10 +359,10 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
             LOGGER.trace("Flow [{}] already contains a definition for state id [{}]", flow.getId(), id);
             return getTransitionableState(flow, id, ViewState.class);
         }
-        val viewFactory = this.flowBuilderServices.getViewFactoryCreator()
-            .createViewFactory(expression, this.flowBuilderServices.getExpressionParser(),
-                this.flowBuilderServices.getConversionService(), binder, this.flowBuilderServices.getValidator(),
-                this.flowBuilderServices.getValidationHintResolver());
+        val viewFactory = flowBuilderServices.getViewFactoryCreator()
+            .createViewFactory(expression, flowBuilderServices.getExpressionParser(),
+                flowBuilderServices.getConversionService(), binder, this.flowBuilderServices.getValidator(),
+                flowBuilderServices.getValidationHintResolver());
         return createViewState(flow, id, viewFactory);
     }
 
@@ -368,22 +393,23 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     }
 
     @Override
-    public SubflowState createSubflowState(final Flow flow, final String id, final String subflow, final Action entryAction) {
-        if (containsFlowState(flow, id)) {
-            LOGGER.trace("Flow [{}] already contains a definition for state id [{}]", flow.getId(), id);
-            return getTransitionableState(flow, id, SubflowState.class);
-        }
+    public SubflowState createSubflowState(final Flow flow, final String stateId, final String subflow, final Action entryAction) {
+        return createSubflowState(flow, stateId, subflow, this.mainFlowDefinitionRegistry, entryAction);
+    }
 
-        val state = new SubflowState(flow, id, new BasicSubflowExpression(subflow, this.mainFlowDefinitionRegistry));
+    @Override
+    public SubflowState createSubflowState(final Flow flow, final String stateId,
+                                           final String subflow, final FlowDefinitionRegistry registry,
+                                           final Action entryAction) {
+        if (containsFlowState(flow, stateId)) {
+            LOGGER.trace("Flow [{}] already contains a definition for state id [{}]", flow.getId(), stateId);
+            return getTransitionableState(flow, stateId, SubflowState.class);
+        }
+        val state = new SubflowState(flow, stateId, new BasicSubflowExpression(subflow, registry));
         if (entryAction != null) {
             state.getEntryActionList().add(entryAction);
         }
         return state;
-    }
-
-    @Override
-    public SubflowState createSubflowState(final Flow flow, final String id, final String subflow) {
-        return createSubflowState(flow, id, subflow, null);
     }
 
     @Override
@@ -399,10 +425,10 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     public void createStateDefaultTransition(final TransitionableState state, final String targetState) {
         if (state == null) {
             LOGGER.trace("Cannot add default transition of [{}] to the given state is null and cannot be found in the flow.", targetState);
-            return;
+        } else {
+            val transition = createTransition(targetState);
+            state.getTransitionSet().add(transition);
         }
-        val transition = createTransition(targetState);
-        state.getTransitionSet().add(transition);
     }
 
     @Override
@@ -461,25 +487,27 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     public Transition createTransitionForState(final TransitionableState state, final String criteriaOutcome,
                                                final String targetState, final boolean removeExisting,
                                                final Map<String, Object> attributes, final Action... actions) {
-        try {
-            if (removeExisting) {
-                var transition = (Transition) null;
-                do {
-                    transition = (Transition) state.getTransition(criteriaOutcome);
-                    if (transition != null) {
-                        state.getTransitionSet().remove(transition);
-                    }
-                } while (transition != null);
+        return FunctionUtils.doIfNotNull(state, () -> {
+            try {
+                if (removeExisting) {
+                    var transition = (Transition) null;
+                    do {
+                        transition = (Transition) state.getTransition(criteriaOutcome);
+                        if (transition != null) {
+                            state.getTransitionSet().remove(transition);
+                        }
+                    } while (transition != null);
+                }
+                val transition = createTransition(criteriaOutcome, targetState, actions);
+                attributes.forEach((key, value) -> transition.getAttributes().put(key, value));
+                state.getTransitionSet().add(transition);
+                LOGGER.trace("Added transition [{}] to the state [{}]", transition.getId(), state.getId());
+                return transition;
+            } catch (final Exception e) {
+                LoggingUtils.error(LOGGER, e);
             }
-            val transition = createTransition(criteriaOutcome, targetState, actions);
-            attributes.forEach((key, value) -> transition.getAttributes().put(key, value));
-            state.getTransitionSet().add(transition);
-            LOGGER.trace("Added transition [{}] to the state [{}]", transition.getId(), state.getId());
-            return transition;
-        } catch (final Exception e) {
-            LoggingUtils.error(LOGGER, e);
-        }
-        return null;
+            return null;
+        });
     }
 
     @Override
@@ -487,14 +515,35 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
                                                final String targetState, final boolean removeExisting,
                                                final Map<String, Object> attributes) {
         return createTransitionForState(state, criteriaOutcome, targetState,
-            removeExisting, attributes, new Action[0]);
+            removeExisting, attributes, EMPTY_ACTIONS_ARRAY);
     }
 
     @Override
     public Transition createTransitionForState(final TransitionableState state, final String criteriaOutcome,
                                                final String targetState, final boolean removeExisting) {
         return createTransitionForState(state, criteriaOutcome, targetState,
-            removeExisting, Map.of(), new Action[0]);
+            removeExisting, Map.of(), EMPTY_ACTIONS_ARRAY);
+    }
+
+    @Override
+    public Transition createTransitionForState(final TransitionableState state,
+                                               final String criteriaOutcome,
+                                               final TargetStateResolver targetStateResolver) {
+        val transition = createTransition(criteriaOutcome, targetStateResolver);
+        state.getTransitionSet().add(transition);
+        return transition;
+    }
+
+    @Override
+    public Transition insertTransitionForState(final TransitionableState state, final String criteriaOutcome,
+                                               final String targetState) {
+        val transition = createTransition(criteriaOutcome, targetState, EMPTY_ACTIONS_ARRAY);
+        val field = ReflectionUtils.findField(state.getTransitionSet().getClass(), "transitions");
+        ReflectionUtils.makeAccessible(field);
+        val transitions = (List<Transition>) ReflectionUtils.getField(field, state.getTransitionSet());
+        Objects.requireNonNull(transitions).addFirst(transition);
+        LOGGER.trace("Added transition [{}] to the state [{}]", transition.getId(), state.getId());
+        return transition;
     }
 
     @Override
@@ -531,14 +580,6 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
         return state.getTransition(transition) != null;
     }
 
-    /**
-     * Create flow variable flow variable.
-     *
-     * @param flow the flow
-     * @param id   the id
-     * @param type the type
-     * @return the flow variable
-     */
     @Override
     public FlowVariable createFlowVariable(final Flow flow, final String id, final Class type) {
         val opt = Arrays.stream(flow.getVariables()).filter(v -> v.getName().equalsIgnoreCase(id)).findFirst();
@@ -548,6 +589,18 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
         val flowVar = new FlowVariable(id, new BeanFactoryVariableValueFactory(type, applicationContext.getAutowireCapableBeanFactory()));
         flow.addVariable(flowVar);
         return flowVar;
+    }
+
+    @Override
+    public BinderConfiguration createStateBinderConfiguration(final Map<String, Map<String, String>> properties) {
+        val binder = new BinderConfiguration();
+        properties.forEach((key, value) -> {
+            val converter = value.get("converter");
+            val required = BooleanUtils.toBoolean(value.getOrDefault("required", Boolean.TRUE.toString()));
+            val binding = new BinderConfiguration.Binding(key, converter, required);
+            binder.addBinding(binding);
+        });
+        return binder;
     }
 
     @Override
@@ -572,8 +625,7 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
 
     @Override
     public List<TransitionCriteria> getTransitionExecutionCriteriaChainForTransition(final Transition def) {
-        if (def.getExecutionCriteria() instanceof TransitionCriteriaChain) {
-            val chain = (TransitionCriteriaChain) def.getExecutionCriteria();
+        if (def.getExecutionCriteria() instanceof final TransitionCriteriaChain chain) {
             val field = ReflectionUtils.findField(chain.getClass(), "criteriaChain");
             Assert.notNull(field, "criteriaChain cannot be null");
             ReflectionUtils.makeAccessible(field);
@@ -610,12 +662,12 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
             LOGGER.warn("Flow registry is not configured and/or initialized correctly.");
             return null;
         }
-        val found = Arrays.asList(registry.getFlowDefinitionIds()).contains(id);
+        val found = List.of(registry.getFlowDefinitionIds()).contains(id);
         if (found) {
             return (Flow) registry.getFlowDefinition(id);
         }
-        LOGGER.warn("Could not find flow definition [{}]. Available flow definition ids are [{}]",
-            id, registry.getFlowDefinitionIds());
+        LOGGER.debug("[{}] could not find flow definition [{}]. Available flow definition ids are [{}]",
+            getName(), id, registry.getFlowDefinitionIds());
         return null;
     }
 
@@ -629,12 +681,12 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
         val spelExpressionParser = new SpelExpressionParser(configuration);
         val parser = new SpringELExpressionParser(spelExpressionParser, this.flowBuilderServices.getConversionService());
         parser.addPropertyAccessor(new ActionPropertyAccessor());
+        parser.addPropertyAccessor(new BeanExpressionContextAccessor());
         parser.addPropertyAccessor(new BeanFactoryPropertyAccessor());
         parser.addPropertyAccessor(new FlowVariablePropertyAccessor());
         parser.addPropertyAccessor(new MapAdaptablePropertyAccessor());
         parser.addPropertyAccessor(new MessageSourcePropertyAccessor());
         parser.addPropertyAccessor(new ScopeSearchingPropertyAccessor());
-        parser.addPropertyAccessor(new BeanExpressionContextAccessor());
         parser.addPropertyAccessor(new MapAccessor());
         parser.addPropertyAccessor(new MapAdaptablePropertyAccessor());
         parser.addPropertyAccessor(new EnvironmentAccessor());
@@ -646,32 +698,59 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
      * Create mapper to subflow state.
      *
      * @param mappings the mappings
+     * @param flow     the flow
      * @return the mapper
      */
-    public Mapper createMapperToSubflowState(final List<DefaultMapping> mappings) {
-        val inputMapper = new DefaultMapper();
-        mappings.forEach(inputMapper::addMapping);
-        return inputMapper;
+    public Mapper createFlowInputMapper(final List<? extends Mapping> mappings, final Flow flow) {
+        val flowInputMapper = flow.getInputMapper() == null ? new DefaultMapper() : (DefaultMapper) flow.getInputMapper();
+        mappings
+            .stream()
+            .map(DefaultMapping.class::cast)
+            .map(CasDefaultMapping::new)
+            .forEach(flowInputMapper::addMapping);
+        flow.setInputMapper(flowInputMapper);
+        return flowInputMapper;
     }
 
     /**
-     * Create mapping to subflow state.
+     * Create flow input mapper.
      *
-     * @param name     the name
-     * @param value    the value
-     * @param required the required
-     * @param type     the type
-     * @return the default mapping
+     * @param mappings the mappings
+     * @return the mapper
      */
-    public DefaultMapping createMappingToSubflowState(final String name, final String value, final boolean required, final Class type) {
-        val parser = this.flowBuilderServices.getExpressionParser();
-        val source = parser.parseExpression(value, new FluentParserContext());
-        val target = parser.parseExpression(name, new FluentParserContext());
-        val mapping = new DefaultMapping(source, target);
+    public Mapper createFlowInputMapper(final List<? extends Mapping> mappings) {
+        val flowInputMapper = new DefaultMapper();
+        mappings
+            .stream()
+            .map(DefaultMapping.class::cast)
+            .map(CasDefaultMapping::new)
+            .forEach(flowInputMapper::addMapping);
+        return flowInputMapper;
+    }
+
+    @Override
+    public Mapping createFlowMapping(final String sourceExpression, final String targetExpression,
+                                     final boolean required, final Class type) {
+        val source = createExpression(sourceExpression);
+        val target = createExpression(targetExpression);
+        val mapping = new CasDefaultMapping(new DefaultMapping(source, target));
         mapping.setRequired(required);
-        val typeConverter = new RuntimeBindingConversionExecutor(type, this.flowBuilderServices.getConversionService());
-        mapping.setTypeConverter(typeConverter);
+        if (type != null) {
+            val typeConverter = new RuntimeBindingConversionExecutor(type, flowBuilderServices.getConversionService());
+            mapping.setTypeConverter(typeConverter);
+        }
         return mapping;
+    }
+
+    /**
+     * Create flow mapping.
+     *
+     * @param sourceExpression the source expression
+     * @param targetExpression the target expression
+     * @return the mapping
+     */
+    public Mapping createFlowMapping(final String sourceExpression, final String targetExpression) {
+        return createFlowMapping(sourceExpression, targetExpression, false, null);
     }
 
     /**
@@ -694,7 +773,7 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     public void cloneActionState(final ActionState source, final ActionState target) {
         source.getActionList().forEach(a -> target.getActionList().add(a));
         source.getExitActionList().forEach(a -> target.getExitActionList().add(a));
-        source.getAttributes().asMap().forEach((k, v) -> target.getAttributes().put(k, v));
+        source.getAttributes().asMap().forEach((key, v) -> target.getAttributes().put(key, v));
         source.getTransitionSet().forEach(t -> target.getTransitionSet().addAll(t));
         val field = ReflectionUtils.findField(target.getExceptionHandlerSet().getClass(), "exceptionHandlers");
         Assert.notNull(field, "exceptionHandlers cannot be null");
@@ -749,15 +828,8 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
         cloneActionState(generateServiceTicket, consentTicketAction);
     }
 
-    /**
-     * Gets transitionable state.
-     *
-     * @param <T>     the type parameter
-     * @param flow    the flow
-     * @param stateId the state id
-     * @param clazz   the clazz
-     * @return the transitionable state
-     */
+
+    @Override
     public <T extends TransitionableState> T getTransitionableState(final Flow flow, final String stateId, final Class<T> clazz) {
         if (containsFlowState(flow, stateId)) {
             val state = flow.getTransitionableState(stateId);
@@ -790,22 +862,27 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
     public void createTransitionsForState(final Flow flow, final String stateId, final Map<String, String> criteriaAndTargets) {
         if (containsFlowState(flow, stateId)) {
             val state = getState(flow, stateId);
-            criteriaAndTargets.forEach((k, v) -> createTransitionForState(state, k, v));
+            criteriaAndTargets.forEach((key, v) -> createTransitionForState(state, key, v));
         }
     }
 
     /**
      * Prepend actions to action state execution list.
      *
-     * @param flow          the flow
-     * @param actionStateId the action state id
-     * @param actions       the actions
+     * @param flow    the flow
+     * @param stateId the action state id
+     * @param actions the actions
      */
-    public void prependActionsToActionStateExecutionList(final Flow flow, final String actionStateId, final String... actions) {
+    public void prependActionsToActionStateExecutionList(final Flow flow, final String stateId, final Object... actions) {
         val evalActions = Arrays.stream(actions)
-            .map(this::createEvaluateAction)
-            .toArray(EvaluateAction[]::new);
-        addActionsToActionStateExecutionListAt(flow, actionStateId, 0, evalActions);
+            .map(givenAction -> {
+                if (givenAction instanceof final Action action) {
+                    return action;
+                }
+                return createEvaluateAction(givenAction.toString());
+            })
+            .toArray(Action[]::new);
+        addActionsToActionStateExecutionListAt(flow, stateId, 0, evalActions);
     }
 
     /**
@@ -815,44 +892,61 @@ public abstract class AbstractCasWebflowConfigurer implements CasWebflowConfigur
      * @param actionStateId the action state id
      * @param actions       the actions
      */
-    public void prependActionsToActionStateExecutionList(final Flow flow, final ActionState actionStateId, final EvaluateAction... actions) {
+    public void prependActionsToActionStateExecutionList(final Flow flow, final TransitionableState actionStateId, final Action... actions) {
         addActionsToActionStateExecutionListAt(flow, actionStateId.getId(), 0, actions);
     }
 
     /**
      * Add actions to action state execution list at.
      *
-     * @param flow          the flow
-     * @param actionStateId the action state id
-     * @param position      the position
-     * @param actions       the actions
+     * @param flow     the flow
+     * @param stateId  the action state id
+     * @param position the position
+     * @param actions  the actions
      */
-    public void addActionsToActionStateExecutionListAt(final Flow flow, final String actionStateId, final int position,
-                                                       final EvaluateAction... actions) {
-        val actionState = getState(flow, actionStateId, ActionState.class);
-        val actionList = actionState.getActionList();
-        val currentActions = new ArrayList<Action>(actionList.size() + actions.length);
-        actionList.forEach(currentActions::add);
-        val index = position < 0 || position == Integer.MAX_VALUE ? currentActions.size() : position;
-        currentActions.forEach(actionList::remove);
-        Arrays.stream(actions).forEach(a -> currentActions.add(index, a));
-        actionList.addAll(currentActions.toArray(Action[]::new));
+    public void addActionsToActionStateExecutionListAt(final Flow flow, final String stateId, final int position,
+                                                       final Action... actions) {
+        if (flow != null) {
+            val givenState = getState(flow, stateId, TransitionableState.class);
+            var actionList = new ActionList();
+            if (givenState instanceof final ActionState as) {
+                actionList = as.getActionList();
+            }
+            if (givenState instanceof final ViewState vs) {
+                actionList = vs.getEntryActionList();
+            }
+            val currentActions = new ArrayList<Action>(actionList.size() + actions.length);
+            actionList.forEach(currentActions::add);
+            val index = position < 0 || position == Integer.MAX_VALUE ? currentActions.size() : position;
+            currentActions.forEach(actionList::remove);
+            currentActions.addAll(index, Arrays.stream(actions).toList());
+            actionList.addAll(currentActions.toArray(Action[]::new));
+            LOGGER.trace("Final (entry) action list for state [{}] is [{}]", stateId, actionList);
+        }
     }
 
-    /**
-     * Create external redirect view factory.
-     *
-     * @param expressionId the expression id
-     * @return the view factory
-     */
+
+    @Override
     public ViewFactory createExternalRedirectViewFactory(final String expressionId) {
         val expression = createExpression(expressionId, String.class);
         return new ActionExecutingViewFactory(new ExternalRedirectAction(expression));
     }
 
-    /**
-     * Handle the initialization of the webflow.
-     */
     protected void doInitialize() {
+    }
+
+    private static class CasDefaultMapping extends DefaultMapping {
+        CasDefaultMapping(final DefaultMapping mapping) {
+            super(mapping.getSourceExpression(), mapping.getTargetExpression());
+            setRequired(mapping.isRequired());
+            setTypeConverter(mapping.getTypeConverter());
+        }
+
+        @Override
+        public void map(final DefaultMappingContext context) {
+            if (getSourceExpression().getValue(context.getSource()) != null) {
+                super.map(context);
+            }
+        }
     }
 }
