@@ -3,29 +3,34 @@ package org.apereo.cas.authentication;
 import org.apereo.cas.authentication.exceptions.AccountDisabledException;
 import org.apereo.cas.authentication.exceptions.AccountPasswordMustChangeException;
 import org.apereo.cas.authentication.principal.PrincipalFactoryUtils;
-import org.apereo.cas.config.AmazonCognitoAuthenticationConfiguration;
-import org.apereo.cas.config.CasCoreAuthenticationPrincipalConfiguration;
-import org.apereo.cas.config.CasCoreNotificationsConfiguration;
-import org.apereo.cas.config.CasCoreServicesConfiguration;
-import org.apereo.cas.config.CasCoreUtilConfiguration;
-import org.apereo.cas.config.CasCoreWebConfiguration;
+import org.apereo.cas.authentication.principal.Service;
+import org.apereo.cas.config.CasAmazonCognitoAuthenticationAutoConfiguration;
+import org.apereo.cas.config.CasCoreAuthenticationAutoConfiguration;
+import org.apereo.cas.config.CasCoreAutoConfiguration;
+import org.apereo.cas.config.CasCoreLogoutAutoConfiguration;
+import org.apereo.cas.config.CasCoreNotificationsAutoConfiguration;
+import org.apereo.cas.config.CasCoreScriptingAutoConfiguration;
+import org.apereo.cas.config.CasCoreServicesAutoConfiguration;
+import org.apereo.cas.config.CasCoreTicketsAutoConfiguration;
+import org.apereo.cas.config.CasCoreUtilAutoConfiguration;
+import org.apereo.cas.config.CasCoreWebAutoConfiguration;
 import org.apereo.cas.config.CasPersonDirectoryTestConfiguration;
 import org.apereo.cas.config.CasRegisteredServicesTestConfiguration;
-import org.apereo.cas.config.support.CasWebApplicationServiceFactoryConfiguration;
 import org.apereo.cas.configuration.CasConfigurationProperties;
 import org.apereo.cas.services.ServicesManager;
-
+import org.apereo.cas.test.CasTestExtension;
+import org.apereo.cas.util.spring.boot.SpringBootTestAutoConfigurations;
 import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.proc.ConfigurableJWTProcessor;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
 import software.amazon.awssdk.services.cognitoidentityprovider.CognitoIdentityProviderClient;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.AdminGetUserRequest;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.AdminGetUserResponse;
@@ -36,14 +41,12 @@ import software.amazon.awssdk.services.cognitoidentityprovider.model.Authenticat
 import software.amazon.awssdk.services.cognitoidentityprovider.model.InvalidPasswordException;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.NotAuthorizedException;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.UserNotFoundException;
-
 import javax.security.auth.login.AccountExpiredException;
 import javax.security.auth.login.AccountNotFoundException;
 import javax.security.auth.login.FailedLoginException;
 import java.time.Clock;
 import java.time.Instant;
 import java.util.List;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -53,17 +56,20 @@ import static org.mockito.Mockito.*;
  * @author Misagh Moayyed
  * @since 6.0.0
  */
+@SpringBootTestAutoConfigurations
 @SpringBootTest(classes = {
-    RefreshAutoConfiguration.class,
-    CasCoreNotificationsConfiguration.class,
-    CasCoreServicesConfiguration.class,
-    CasCoreWebConfiguration.class,
-    CasWebApplicationServiceFactoryConfiguration.class,
+    CasCoreNotificationsAutoConfiguration.class,
+    CasCoreWebAutoConfiguration.class,
+    CasCoreServicesAutoConfiguration.class,
+    CasCoreTicketsAutoConfiguration.class,
     CasRegisteredServicesTestConfiguration.class,
-    CasCoreUtilConfiguration.class,
+    CasCoreUtilAutoConfiguration.class,
+    CasCoreScriptingAutoConfiguration.class,
     CasPersonDirectoryTestConfiguration.class,
-    CasCoreAuthenticationPrincipalConfiguration.class,
-    AmazonCognitoAuthenticationConfiguration.class
+    CasCoreAuthenticationAutoConfiguration.class,
+    CasCoreAutoConfiguration.class,
+    CasCoreLogoutAutoConfiguration.class,
+    CasAmazonCognitoAuthenticationAutoConfiguration.class
 }, properties = {
     "cas.authn.cognito.user-pool-id=us-west-2_igeBNHRsb",
     "cas.authn.cognito.region=us-west-2",
@@ -74,8 +80,9 @@ import static org.mockito.Mockito.*;
     "cas.authn.cognito.mapped-attributes.[custom\\:netid]=netid"
 })
 @Tag("AmazonWebServices")
+@ExtendWith(CasTestExtension.class)
 @EnableConfigurationProperties(CasConfigurationProperties.class)
-public class AmazonCognitoAuthenticationAuthenticationHandlerTests {
+class AmazonCognitoAuthenticationAuthenticationHandlerTests {
     @Autowired
     @Qualifier("amazonCognitoAuthenticationHandler")
     private AuthenticationHandler amazonCognitoAuthenticationHandler;
@@ -84,12 +91,12 @@ public class AmazonCognitoAuthenticationAuthenticationHandlerTests {
     private CasConfigurationProperties casProperties;
 
     @Test
-    public void verifyHandler() {
+    void verifyHandler() {
         assertNotNull(amazonCognitoAuthenticationHandler);
     }
 
     @Test
-    public void verifyExpiredPassword() throws Exception {
+    void verifyExpiredPassword() throws Throwable {
         val jwtProcessor = getConfigurableJWTProcessor("casuser");
 
         val provider = mock(CognitoIdentityProviderClient.class);
@@ -97,40 +104,40 @@ public class AmazonCognitoAuthenticationAuthenticationHandlerTests {
         when(provider.adminInitiateAuth(any(AdminInitiateAuthRequest.class))).thenReturn(initResult1);
 
         val creds = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("casuser-exp-password", "Hell063!!");
-        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(getClass().getSimpleName(), mock(ServicesManager.class),
+        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(mock(ServicesManager.class),
             PrincipalFactoryUtils.newPrincipalFactory(), provider, casProperties.getAuthn().getCognito(), jwtProcessor);
 
-        assertThrows(AccountPasswordMustChangeException.class, () -> handler.authenticate(creds));
+        assertThrows(AccountPasswordMustChangeException.class, () -> handler.authenticate(creds, mock(Service.class)));
     }
 
     @Test
-    public void verifyAccountDisabled() throws Exception {
+    void verifyAccountDisabled() throws Throwable {
         verifyAccountStatusFailure(NotAuthorizedException.builder().message("disabled").build(), AccountDisabledException.class);
     }
 
     @Test
-    public void verifyAccountExpired() throws Exception {
+    void verifyAccountExpired() throws Throwable {
         verifyAccountStatusFailure(NotAuthorizedException.builder().message("expired").build(), AccountExpiredException.class);
     }
 
     @Test
-    public void verifyAccountFail() throws Exception {
+    void verifyAccountFail() throws Throwable {
         verifyAccountStatusFailure(UserNotFoundException.builder().message("no-found").build(), AccountNotFoundException.class);
         verifyAccountStatusFailure(NotAuthorizedException.builder().message("not-found").build(), FailedLoginException.class);
     }
 
     @Test
-    public void verifyAccountNotFound() throws Exception {
+    void verifyAccountNotFound() throws Throwable {
         verifyAccountStatusFailure(NotAuthorizedException.builder().message("fail").build(), FailedLoginException.class);
     }
 
     @Test
-    public void verifyAccountPassword() throws Exception {
+    void verifyAccountPassword() throws Throwable {
         verifyAccountStatusFailure(InvalidPasswordException.builder().message("fail").build(), AccountPasswordMustChangeException.class);
     }
 
     @Test
-    public void verifyNoSub() throws Exception {
+    void verifyNoSub() throws Throwable {
         val jwtProcessor = getConfigurableJWTProcessor(StringUtils.EMPTY);
         val provider = mock(CognitoIdentityProviderClient.class);
 
@@ -139,14 +146,14 @@ public class AmazonCognitoAuthenticationAuthenticationHandlerTests {
         when(provider.adminInitiateAuth(any(AdminInitiateAuthRequest.class))).thenReturn(result2);
 
         val creds = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("casuser-ok", "Hell063!!");
-        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(getClass().getSimpleName(), mock(ServicesManager.class),
+        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(mock(ServicesManager.class),
             PrincipalFactoryUtils.newPrincipalFactory(), provider, casProperties.getAuthn().getCognito(), jwtProcessor);
-        assertThrows(FailedLoginException.class, () -> handler.authenticate(creds));
+        assertThrows(FailedLoginException.class, () -> handler.authenticate(creds, mock(Service.class)));
     }
 
     @Test
     @SuppressWarnings("JdkObsolete")
-    public void verifyOK() throws Exception {
+    void verifyOK() throws Throwable {
         val jwtProcessor = getConfigurableJWTProcessor("casuser");
         val provider = mock(CognitoIdentityProviderClient.class);
 
@@ -164,15 +171,15 @@ public class AmazonCognitoAuthenticationAuthenticationHandlerTests {
 
         when(provider.adminGetUser(any(AdminGetUserRequest.class))).thenReturn(userResult1);
         val creds = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("casuser-ok", "Hell063!!");
-        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(getClass().getSimpleName(), mock(ServicesManager.class),
+        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(mock(ServicesManager.class),
             PrincipalFactoryUtils.newPrincipalFactory(), provider, casProperties.getAuthn().getCognito(), jwtProcessor);
-        val result = handler.authenticate(creds);
+        val result = handler.authenticate(creds, mock(Service.class));
         assertNotNull(result);
     }
 
     @Test
     @SuppressWarnings("JdkObsolete")
-    public void verifyOKWithMappedAttributes() throws Exception {
+    void verifyOKWithMappedAttributes() throws Throwable {
         val jwtProcessor = getConfigurableJWTProcessor("casuser");
         val provider = mock(CognitoIdentityProviderClient.class);
 
@@ -191,11 +198,11 @@ public class AmazonCognitoAuthenticationAuthenticationHandlerTests {
         when(provider.adminGetUser(any(AdminGetUserRequest.class))).thenReturn(userResult1);
         val creds = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("casuser-ok", "Hell063!!");
 
-        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(getClass().getSimpleName(), mock(ServicesManager.class),
+        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(mock(ServicesManager.class),
                 PrincipalFactoryUtils.newPrincipalFactory(), provider,
                 casProperties.getAuthn().getCognito(), jwtProcessor);
-        val result = handler.authenticate(creds);
-        assertEquals("cas789", result.getPrincipal().getAttributes().get("netid").get(0));
+        val result = handler.authenticate(creds, mock(Service.class));
+        assertEquals("cas789", result.getPrincipal().getAttributes().get("netid").getFirst());
     }
 
     private static ConfigurableJWTProcessor getConfigurableJWTProcessor(final String sub) throws Exception {
@@ -211,8 +218,8 @@ public class AmazonCognitoAuthenticationAuthenticationHandlerTests {
 
         when(provider.adminInitiateAuth(any(AdminInitiateAuthRequest.class))).thenThrow(ex);
         val creds = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("casuser-exp-password", "Hell063!!");
-        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(getClass().getSimpleName(), mock(ServicesManager.class),
+        val handler = new AmazonCognitoAuthenticationAuthenticationHandler(mock(ServicesManager.class),
             PrincipalFactoryUtils.newPrincipalFactory(), provider, casProperties.getAuthn().getCognito(), jwtProcessor);
-        assertThrows(expected, () -> handler.authenticate(creds));
+        assertThrows(expected, () -> handler.authenticate(creds, mock(Service.class)));
     }
 }
