@@ -8,10 +8,9 @@ import org.apereo.cas.support.events.service.CasRegisteredServiceDeletedEvent;
 import org.apereo.cas.support.events.service.CasRegisteredServiceSavedEvent;
 import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.serialization.StringSerializer;
-
-import com.fasterxml.jackson.core.util.MinimalPrettyPrinter;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
+import org.apereo.inspektr.common.web.ClientInfoHolder;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.http.MediaType;
 import software.amazon.awssdk.core.sync.RequestBody;
@@ -24,8 +23,8 @@ import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 import software.amazon.awssdk.services.s3.model.ListBucketsRequest;
 import software.amazon.awssdk.services.s3.model.ListObjectsV2Request;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
-
 import java.util.Collection;
+import java.util.Locale;
 import java.util.Map;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -48,16 +47,17 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
     private final StringSerializer<RegisteredService> registeredServiceSerializer;
 
     public AmazonS3ServiceRegistry(final ConfigurableApplicationContext applicationContext,
-        final Collection<ServiceRegistryListener> serviceRegistryListeners,
-        final S3Client s3Client) {
+                                   final Collection<ServiceRegistryListener> serviceRegistryListeners,
+                                   final S3Client s3Client) {
         super(applicationContext, serviceRegistryListeners);
         this.s3Client = s3Client;
-        this.registeredServiceSerializer = new RegisteredServiceJsonSerializer(new MinimalPrettyPrinter());
+        this.registeredServiceSerializer = new RegisteredServiceJsonSerializer(applicationContext);
     }
 
     @Override
     public RegisteredService save(final RegisteredService rs) {
         try {
+            rs.assignIdIfNecessary();
             LOGGER.trace("Saving registered service [{}]", rs);
             invokeServiceRegistryListenerPreSave(rs);
             val bucketNameToUse = determineBucketName(rs);
@@ -77,10 +77,11 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
                     "id", String.valueOf(rs.getId()),
                     "description", rs.getDescription()))
                 .build();
-            val body = this.registeredServiceSerializer.toString(rs);
+            val body = registeredServiceSerializer.toString(rs);
+            val clientInfo = ClientInfoHolder.getClientInfo();
             s3Client.putObject(request, RequestBody.fromString(body));
             LOGGER.trace("Saved registered service [{}]", rs);
-            publishEvent(new CasRegisteredServiceSavedEvent(this, rs));
+            publishEvent(new CasRegisteredServiceSavedEvent(this, rs, clientInfo));
         } catch (final Exception e) {
             LoggingUtils.error(LOGGER, e);
         }
@@ -119,9 +120,10 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
                     .key(object.key())
                     .build()));
                 val bucketName = determineBucketName(registeredService);
+                val clientInfo = ClientInfoHolder.getClientInfo();
                 s3Client.deleteBucket(DeleteBucketRequest.builder().bucket(bucketName).build());
                 LOGGER.trace("Deleted registered service [{}]", registeredService);
-                publishEvent(new CasRegisteredServiceDeletedEvent(this, registeredService));
+                publishEvent(new CasRegisteredServiceDeletedEvent(this, registeredService, clientInfo));
                 return true;
             }
         } catch (final Exception e) {
@@ -164,7 +166,7 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
         val result = s3Client.listObjectsV2(ListObjectsV2Request.builder().bucket(bucket.name()).build());
         val objects = result.contents();
         LOGGER.debug("Located [{}] S3 object(s) from bucket [{}]", objects.size(), bucket.name());
-        val objectKey = objects.get(0).key();
+        val objectKey = objects.getFirst().key();
         LOGGER.debug("Fetching object [{}] from bucket [{}]", objectKey, bucket.name());
         val object = s3Client.getObject(GetObjectRequest.builder().bucket(bucket.name()).key(objectKey).build());
         return registeredServiceSerializer.from(object);
@@ -179,6 +181,6 @@ public class AmazonS3ServiceRegistry extends AbstractServiceRegistry {
     }
 
     private static String determineBucketName(final RegisteredService registeredService) {
-        return (BUCKET_NAME_PREFIX + '-' + registeredService.getName() + '-' + registeredService.getId()).toLowerCase();
+        return (BUCKET_NAME_PREFIX + '-' + registeredService.getName() + '-' + registeredService.getId()).toLowerCase(Locale.ENGLISH);
     }
 }
