@@ -5,10 +5,10 @@ import org.apereo.cas.git.PathRegexPatternTreeFilter;
 import org.apereo.cas.services.locator.GitRepositoryRegisteredServiceLocator;
 import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.RegexUtils;
+import org.apereo.cas.util.concurrent.CasReentrantLock;
+import org.apereo.cas.util.function.FunctionUtils;
 import org.apereo.cas.util.serialization.StringSerializer;
 
-import lombok.SneakyThrows;
-import lombok.Synchronized;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.io.FileUtils;
@@ -37,6 +37,8 @@ import java.util.stream.Collectors;
  */
 @Slf4j
 public class GitServiceRegistry extends AbstractServiceRegistry {
+    private final CasReentrantLock lock = new CasReentrantLock();
+
     private final GitRepository gitRepository;
 
     private final Collection<StringSerializer<RegisteredService>> registeredServiceSerializers;
@@ -66,34 +68,34 @@ public class GitServiceRegistry extends AbstractServiceRegistry {
 
     @Override
     public RegisteredService save(final RegisteredService registeredService) {
-        if (registeredService.getId() == RegisteredService.INITIAL_IDENTIFIER_VALUE) {
-            LOGGER.trace("Service id not set. Calculating id based on system time...");
-            registeredService.setId(System.currentTimeMillis());
-        }
+        return Unchecked.supplier(() -> {
+            registeredService.assignIdIfNecessary();
 
-        val message = "Saved changes to registered service " + registeredService.getName();
-        val result = locateExistingRegisteredServiceFile(registeredService);
-        result.ifPresentOrElse(file -> writeRegisteredServiceToFile(registeredService, file),
-            () -> {
-                val file = registeredServiceLocators.get(0).determine(registeredService,
-                    GitRepositoryRegisteredServiceLocator.FILE_EXTENSIONS.get(0));
-                writeRegisteredServiceToFile(registeredService, file);
-            });
+            val message = "Saved changes to registered service " + registeredService.getName();
+            val result = locateExistingRegisteredServiceFile(registeredService);
+            result.ifPresentOrElse(file -> writeRegisteredServiceToFile(registeredService, file),
+                () -> {
+                    val file = registeredServiceLocators.getFirst().determine(registeredService,
+                        GitRepositoryRegisteredServiceLocator.FILE_EXTENSIONS.getFirst());
+                    writeRegisteredServiceToFile(registeredService, file);
+                });
 
-        invokeServiceRegistryListenerPreSave(registeredService);
-        commitAndPush(message);
-        load();
-        return registeredService;
+            invokeServiceRegistryListenerPreSave(registeredService);
+            commitAndPush(message);
+            load();
+            return registeredService;
+        }).get();
     }
 
-    @SneakyThrows
     @Override
     public boolean delete(final RegisteredService registeredService) {
         val file = locateExistingRegisteredServiceFile(registeredService);
         if (file.isPresent()) {
             val message = "Deleted registered service " + registeredService.getName();
-            FileUtils.forceDelete(file.get());
-            commitAndPush(message);
+            FunctionUtils.doUnchecked(__ -> {
+                FileUtils.forceDelete(file.get());
+                commitAndPush(message);
+            });
             load();
             return true;
         }
@@ -102,72 +104,79 @@ public class GitServiceRegistry extends AbstractServiceRegistry {
 
     @Override
     public void deleteAll() {
-        val currentServices = load();
-        currentServices.stream()
-            .map(this::locateExistingRegisteredServiceFile)
-            .filter(Optional::isPresent)
-            .map(Optional::get)
-            .forEach(Unchecked.consumer(FileUtils::forceDelete));
-        val message = "Deleted registered services from repository";
-        commitAndPush(message);
+        FunctionUtils.doUnchecked(__ -> {
+            val currentServices = load();
+            currentServices.stream()
+                .map(this::locateExistingRegisteredServiceFile)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .forEach(Unchecked.consumer(FileUtils::forceDelete));
+            val message = "Deleted registered services from repository";
+            commitAndPush(message);
+        });
     }
 
-    @Synchronized
     @Override
     public Collection<RegisteredService> load() {
-        try {
-            if (gitRepository.pull()) {
-                LOGGER.debug("Successfully pulled changes from the remote repository");
-            } else {
-                LOGGER.info("Unable to pull changes from the remote repository. Service definition files may be stale.");
-            }
-            val objectPatternStr = StringUtils.isBlank(rootDirectory)
-                ? GitRepositoryRegisteredServiceLocator.PATTEN_ACCEPTED_REPOSITORY_FILES
-                : rootDirectory + "/" + GitRepositoryRegisteredServiceLocator.PATTEN_ACCEPTED_REPOSITORY_FILES;
-            val objectPattern = RegexUtils.createPattern(objectPatternStr, Pattern.CASE_INSENSITIVE);
-            val objects = gitRepository.getObjectsInRepository(
-                new PathRegexPatternTreeFilter(objectPattern));
-            registeredServices = objects
-                .stream()
-                .filter(Objects::nonNull)
-                .map(this::parseGitObjectContentIntoRegisteredService)
-                .flatMap(Collection::stream)
-                .map(this::invokeServiceRegistryListenerPostLoad)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-            return registeredServices;
-        } catch (final Exception e) {
-            LoggingUtils.warn(LOGGER, e);
-            val parentDir = StringUtils.isBlank(rootDirectory)
-                ? gitRepository.getRepositoryDirectory()
-                : new File(gitRepository.getRepositoryDirectory(), rootDirectory);
-            val files = FileUtils.listFiles(parentDir,
-                GitRepositoryRegisteredServiceLocator.FILE_EXTENSIONS.toArray(ArrayUtils.EMPTY_STRING_ARRAY), true);
-            LOGGER.debug("Located [{}] files(s)", files.size());
+        return lock.tryLock(() -> {
+            try {
+                if (gitRepository.pull()) {
+                    LOGGER.debug("Successfully pulled changes from the remote repository");
+                } else {
+                    LOGGER.info("Unable to pull changes from the remote repository. Service definition files may be stale.");
+                }
+                val objectPatternStr = StringUtils.isBlank(rootDirectory)
+                    ? GitRepositoryRegisteredServiceLocator.PATTEN_ACCEPTED_REPOSITORY_FILES
+                    : rootDirectory + '/' + GitRepositoryRegisteredServiceLocator.PATTEN_ACCEPTED_REPOSITORY_FILES;
+                val objectPattern = RegexUtils.createPattern(objectPatternStr, Pattern.CASE_INSENSITIVE);
+                val objects = gitRepository.getObjectsInRepository(
+                    new PathRegexPatternTreeFilter(objectPattern));
+                registeredServices = objects
+                    .stream()
+                    .filter(Objects::nonNull)
+                    .map(this::parseGitObjectContentIntoRegisteredService)
+                    .flatMap(Collection::stream)
+                    .map(this::invokeServiceRegistryListenerPostLoad)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+                return registeredServices;
+            } catch (final Exception e) {
+                LoggingUtils.warn(LOGGER, e);
+                val parentDir = StringUtils.isBlank(rootDirectory)
+                    ? gitRepository.getRepositoryDirectory()
+                    : new File(gitRepository.getRepositoryDirectory(), rootDirectory);
+                val files = FileUtils.listFiles(parentDir,
+                    GitRepositoryRegisteredServiceLocator.FILE_EXTENSIONS.toArray(ArrayUtils.EMPTY_STRING_ARRAY), true);
+                LOGGER.debug("Located [{}] files(s)", files.size());
 
-            registeredServices = files
-                .stream()
-                .filter(file -> file.isFile() && file.canRead() && file.canWrite() && file.length() > 0)
-                .map(Unchecked.function(file -> {
-                    try (val in = Files.newBufferedReader(file.toPath())) {
-                        return registeredServiceSerializers
-                            .stream()
-                            .filter(s -> s.supports(file))
-                            .map(s -> s.load(in))
-                            .filter(Objects::nonNull)
-                            .flatMap(Collection::stream)
-                            .map(this::invokeServiceRegistryListenerPostLoad)
-                            .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
-                    }
-                }))
-                .flatMap(List::stream)
-                .sorted()
-                .map(this::invokeServiceRegistryListenerPostLoad)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-            return registeredServices;
-        }
+                registeredServices = files
+                    .stream()
+                    .filter(file -> file.isFile() && file.canRead() && file.canWrite() && file.length() > 0)
+                    .map(Unchecked.function(file -> {
+                        try (val in = Files.newBufferedReader(file.toPath())) {
+                            return registeredServiceSerializers
+                                .stream()
+                                .filter(s -> s.supports(file))
+                                .map(s -> s.load(in))
+                                .filter(Objects::nonNull)
+                                .flatMap(Collection::stream)
+                                .map(this::invokeServiceRegistryListenerPostLoad)
+                                .filter(Objects::nonNull)
+                                .collect(Collectors.toList());
+                        } catch (final Exception ex) {
+                            LOGGER.error("Error reading configuration file [{}]", file.toPath());
+                            LoggingUtils.error(LOGGER, ex);
+                        }
+                        return new ArrayList<RegisteredService>(0);
+                    }))
+                    .flatMap(List::stream)
+                    .sorted()
+                    .map(this::invokeServiceRegistryListenerPostLoad)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+                return registeredServices;
+            }
+        });
     }
 
     @Override
@@ -183,7 +192,7 @@ public class GitServiceRegistry extends AbstractServiceRegistry {
             .findFirst();
     }
 
-    private void commitAndPush(final String message) {
+    private void commitAndPush(final String message) throws Exception {
         this.gitRepository.commitAll(message);
         if (this.pushChanges) {
             this.gitRepository.push();
