@@ -1,10 +1,9 @@
 package org.apereo.cas.monitor;
 
+import org.apereo.cas.mongo.CasMongoOperations;
+
 import lombok.val;
 import org.bson.Document;
-import org.springframework.data.mongodb.core.MongoTemplate;
-
-import java.util.stream.Collectors;
 
 /**
  * This is {@link MongoDbHealthIndicator} where it attempts to collect statistics
@@ -14,9 +13,9 @@ import java.util.stream.Collectors;
  * @since 5.2.0
  */
 public class MongoDbHealthIndicator extends AbstractCacheHealthIndicator {
-    private final MongoTemplate mongoTemplate;
+    private final CasMongoOperations mongoTemplate;
 
-    public MongoDbHealthIndicator(final MongoTemplate mongoTemplate,
+    public MongoDbHealthIndicator(final CasMongoOperations mongoTemplate,
                                   final long evictionThreshold,
                                   final long threshold) {
         super(evictionThreshold, threshold);
@@ -28,17 +27,15 @@ public class MongoDbHealthIndicator extends AbstractCacheHealthIndicator {
         val list = mongoTemplate.getCollectionNames()
             .stream()
             .map(c -> {
-                val db = mongoTemplate.getMongoDatabaseFactory().getMongoDatabase();
-                val stats = db.runCommand(new Document("collStats", c));
+                val stats = mongoTemplate.executeCommand(new Document("collStats", c));
                 return new MongoDbCacheStatistics(stats, c);
-            })
-            .collect(Collectors.toList());
+            }).toList();
 
         return list.toArray(CacheStatistics[]::new);
     }
 
     @Override
-    protected String getName() {
+    public String getName() {
         val dbName = mongoTemplate.getMongoDatabaseFactory().getMongoDatabase().getName();
         return super.getName() + '-' + dbName;
     }
