@@ -1,36 +1,27 @@
 package org.apereo.cas.support.oauth.authenticator;
 
+import org.apereo.cas.CentralAuthenticationService;
 import org.apereo.cas.authentication.AuthenticationSystemSupport;
 import org.apereo.cas.authentication.principal.PrincipalResolver;
 import org.apereo.cas.authentication.principal.ServiceFactory;
 import org.apereo.cas.authentication.principal.WebApplicationService;
 import org.apereo.cas.config.CasAuthenticationEventExecutionPlanTestConfiguration;
-import org.apereo.cas.config.CasCoreAuthenticationConfiguration;
-import org.apereo.cas.config.CasCoreAuthenticationHandlersConfiguration;
-import org.apereo.cas.config.CasCoreAuthenticationPolicyConfiguration;
-import org.apereo.cas.config.CasCoreAuthenticationPrincipalConfiguration;
-import org.apereo.cas.config.CasCoreAuthenticationSupportConfiguration;
-import org.apereo.cas.config.CasCoreConfiguration;
-import org.apereo.cas.config.CasCoreHttpConfiguration;
-import org.apereo.cas.config.CasCoreNotificationsConfiguration;
-import org.apereo.cas.config.CasCoreServicesConfiguration;
-import org.apereo.cas.config.CasCoreTicketCatalogConfiguration;
-import org.apereo.cas.config.CasCoreTicketComponentSerializationConfiguration;
-import org.apereo.cas.config.CasCoreTicketIdGeneratorsConfiguration;
-import org.apereo.cas.config.CasCoreTicketsConfiguration;
-import org.apereo.cas.config.CasCoreTicketsSerializationConfiguration;
-import org.apereo.cas.config.CasCoreUtilConfiguration;
-import org.apereo.cas.config.CasCoreWebConfiguration;
-import org.apereo.cas.config.CasOAuth20AuthenticationServiceSelectionStrategyConfiguration;
-import org.apereo.cas.config.CasOAuth20ComponentSerializationConfiguration;
-import org.apereo.cas.config.CasOAuth20Configuration;
-import org.apereo.cas.config.CasOAuth20EndpointsConfiguration;
-import org.apereo.cas.config.CasOAuth20ServicesConfiguration;
-import org.apereo.cas.config.CasOAuth20TicketSerializationConfiguration;
+import org.apereo.cas.config.CasCoreAuthenticationAutoConfiguration;
+import org.apereo.cas.config.CasCoreAutoConfiguration;
+import org.apereo.cas.config.CasCoreCookieAutoConfiguration;
+import org.apereo.cas.config.CasCoreLogoutAutoConfiguration;
+import org.apereo.cas.config.CasCoreMultifactorAuthenticationAutoConfiguration;
+import org.apereo.cas.config.CasCoreMultifactorAuthenticationWebflowAutoConfiguration;
+import org.apereo.cas.config.CasCoreNotificationsAutoConfiguration;
+import org.apereo.cas.config.CasCoreScriptingAutoConfiguration;
+import org.apereo.cas.config.CasCoreServicesAutoConfiguration;
+import org.apereo.cas.config.CasCoreTicketsAutoConfiguration;
+import org.apereo.cas.config.CasCoreUtilAutoConfiguration;
+import org.apereo.cas.config.CasCoreWebAutoConfiguration;
+import org.apereo.cas.config.CasCoreWebflowAutoConfiguration;
+import org.apereo.cas.config.CasOAuth20AutoConfiguration;
 import org.apereo.cas.config.CasPersonDirectoryTestConfiguration;
-import org.apereo.cas.config.support.CasWebApplicationServiceFactoryConfiguration;
 import org.apereo.cas.configuration.CasConfigurationProperties;
-import org.apereo.cas.logout.config.CasCoreLogoutConfiguration;
 import org.apereo.cas.mock.MockTicketGrantingTicket;
 import org.apereo.cas.services.DefaultRegisteredServiceUsernameProvider;
 import org.apereo.cas.services.RegisteredServiceTestUtils;
@@ -38,34 +29,36 @@ import org.apereo.cas.services.ReturnAllAttributeReleasePolicy;
 import org.apereo.cas.services.ReturnAllowedAttributeReleasePolicy;
 import org.apereo.cas.services.ServicesManager;
 import org.apereo.cas.support.oauth.services.OAuthRegisteredService;
+import org.apereo.cas.support.oauth.validator.OAuth20ClientSecretValidator;
+import org.apereo.cas.support.oauth.web.OAuth20RequestParameterResolver;
+import org.apereo.cas.support.oauth.web.endpoints.OAuth20ConfigurationContext;
+import org.apereo.cas.test.CasTestExtension;
 import org.apereo.cas.ticket.accesstoken.OAuth20AccessToken;
 import org.apereo.cas.ticket.code.OAuth20Code;
 import org.apereo.cas.ticket.expiration.NeverExpiresExpirationPolicy;
 import org.apereo.cas.ticket.refreshtoken.OAuth20RefreshToken;
 import org.apereo.cas.ticket.registry.TicketRegistry;
 import org.apereo.cas.token.JwtBuilder;
-import org.apereo.cas.web.config.CasCookieConfiguration;
-
+import org.apereo.cas.util.RandomUtils;
+import org.apereo.cas.util.spring.boot.SpringBootTestAutoConfigurations;
+import org.apereo.cas.validation.AuthenticationAttributeReleasePolicy;
 import lombok.val;
-import org.apereo.services.persondir.util.CaseCanonicalizationMode;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.pac4j.core.credentials.authenticator.Authenticator;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.SpringBootConfiguration;
 import org.springframework.boot.autoconfigure.ImportAutoConfiguration;
-import org.springframework.boot.autoconfigure.aop.AopAutoConfiguration;
-import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
-import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
+import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.annotation.Import;
 import org.springframework.retry.annotation.EnableRetry;
-
-import java.util.Arrays;
+import java.time.Clock;
+import java.time.ZonedDateTime;
+import java.util.List;
 import java.util.UUID;
-
 import static org.mockito.Mockito.*;
 
 /**
@@ -77,21 +70,33 @@ import static org.mockito.Mockito.*;
 @SpringBootTest(classes = BaseOAuth20AuthenticatorTests.SharedTestConfiguration.class)
 @EnableConfigurationProperties(CasConfigurationProperties.class)
 @EnableRetry
+@ExtendWith(CasTestExtension.class)
 public abstract class BaseOAuth20AuthenticatorTests {
+    @Autowired
+    protected ConfigurableApplicationContext applicationContext;
+
     @Autowired
     @Qualifier(ServicesManager.BEAN_NAME)
     protected ServicesManager servicesManager;
 
     @Autowired
+    @Qualifier(CentralAuthenticationService.BEAN_NAME)
+    protected CentralAuthenticationService centralAuthenticationService;
+    
+    @Autowired
     @Qualifier(AuthenticationSystemSupport.BEAN_NAME)
     protected AuthenticationSystemSupport authenticationSystemSupport;
 
     @Autowired
-    @Qualifier("webApplicationServiceFactory")
+    @Qualifier(OAuth20RequestParameterResolver.BEAN_NAME)
+    protected OAuth20RequestParameterResolver oauthRequestParameterResolver;
+
+    @Autowired
+    @Qualifier(WebApplicationService.BEAN_NAME_FACTORY)
     protected ServiceFactory<WebApplicationService> serviceFactory;
 
     @Autowired
-    @Qualifier("accessTokenJwtBuilder")
+    @Qualifier(JwtBuilder.ACCESS_TOKEN_JWT_BUILDER_BEAN_NAME)
     protected JwtBuilder accessTokenJwtBuilder;
 
     @Autowired
@@ -99,8 +104,20 @@ public abstract class BaseOAuth20AuthenticatorTests {
     protected PrincipalResolver defaultPrincipalResolver;
 
     @Autowired
-    @Qualifier("oAuthClientAuthenticator")
-    protected Authenticator oAuthClientAuthenticator;
+    @Qualifier("oauthClientAuthenticator")
+    protected Authenticator oauthClientAuthenticator;
+
+    @Autowired
+    @Qualifier("oauth20ConfigurationContext")
+    protected OAuth20ConfigurationContext configurationContext;
+
+    @Autowired
+    @Qualifier(OAuth20ClientSecretValidator.BEAN_NAME)
+    protected OAuth20ClientSecretValidator oauth20ClientSecretValidator;
+
+    @Autowired
+    @Qualifier(AuthenticationAttributeReleasePolicy.BEAN_NAME)
+    protected AuthenticationAttributeReleasePolicy authenticationAttributeReleasePolicy;
 
     protected OAuthRegisteredService service;
 
@@ -120,23 +137,23 @@ public abstract class BaseOAuth20AuthenticatorTests {
     protected CasConfigurationProperties casProperties;
 
     @BeforeEach
-    public void initialize() {
+    void initialize() {
         service = new OAuthRegisteredService();
         service.setName("OAuth");
-        service.setId(1);
+        service.setId(RandomUtils.nextLong());
         service.setServiceId("https://www.example.org");
         service.setClientSecret("secret");
         service.setClientId("client");
 
         serviceWithoutSecret = new OAuthRegisteredService();
         serviceWithoutSecret.setName("OAuth2");
-        serviceWithoutSecret.setId(2);
+        serviceWithoutSecret.setId(RandomUtils.nextLong());
         serviceWithoutSecret.setServiceId("https://www.example2.org");
         serviceWithoutSecret.setClientId("clientWithoutSecret");
 
         serviceWithoutSecret2 = new OAuthRegisteredService();
         serviceWithoutSecret2.setName("OAuth3");
-        serviceWithoutSecret2.setId(3);
+        serviceWithoutSecret2.setId(RandomUtils.nextLong());
         serviceWithoutSecret2.setServiceId("https://www.example3org");
         serviceWithoutSecret2.setClientId("clientWithoutSecret2");
 
@@ -144,72 +161,59 @@ public abstract class BaseOAuth20AuthenticatorTests {
         serviceJwtAccessToken.setName("The registered service name");
         serviceJwtAccessToken.setServiceId("https://oauth.jwt.service");
         serviceJwtAccessToken.setClientId("clientid");
+        serviceJwtAccessToken.setId(RandomUtils.nextLong());
         serviceJwtAccessToken.setClientSecret("clientsecret");
         serviceJwtAccessToken.setAttributeReleasePolicy(new ReturnAllAttributeReleasePolicy());
         serviceJwtAccessToken.setJwtAccessToken(true);
 
         serviceWithAttributesMapping = new OAuthRegisteredService();
         serviceWithAttributesMapping.setName("OAuth5");
-        serviceWithAttributesMapping.setId(5);
+        serviceWithAttributesMapping.setId(RandomUtils.nextLong());
         serviceWithAttributesMapping.setServiceId("https://www.example5.org");
         serviceWithAttributesMapping.setClientSecret("secret");
         serviceWithAttributesMapping.setClientId("serviceWithAttributesMapping");
-        serviceWithAttributesMapping.setUsernameAttributeProvider(
-            new DefaultRegisteredServiceUsernameProvider(CaseCanonicalizationMode.LOWER.name()));
+
+        val provider = new DefaultRegisteredServiceUsernameProvider();
+        provider.setCanonicalizationMode("LOWER");
+        serviceWithAttributesMapping.setUsernameAttributeProvider(provider);
         serviceWithAttributesMapping.setAttributeReleasePolicy(
-            new ReturnAllowedAttributeReleasePolicy(Arrays.asList(new String[]{"eduPersonAffiliation"})));
+            new ReturnAllowedAttributeReleasePolicy(List.of("eduPersonAffiliation")));
 
         servicesManager.save(service, serviceWithoutSecret, serviceWithoutSecret2, serviceJwtAccessToken, serviceWithAttributesMapping);
     }
 
+    @SpringBootTestAutoConfigurations
     @ImportAutoConfiguration({
-        RefreshAutoConfiguration.class,
-        SecurityAutoConfiguration.class,
-        WebMvcAutoConfiguration.class,
-        AopAutoConfiguration.class
+        CasCoreUtilAutoConfiguration.class,
+        CasCoreScriptingAutoConfiguration.class,
+        CasCoreNotificationsAutoConfiguration.class,
+        CasCoreServicesAutoConfiguration.class,
+        CasCoreAuthenticationAutoConfiguration.class,
+        CasCoreMultifactorAuthenticationAutoConfiguration.class,
+        CasCoreTicketsAutoConfiguration.class,
+        CasCoreLogoutAutoConfiguration.class,
+        CasCoreWebAutoConfiguration.class,
+        CasCoreCookieAutoConfiguration.class,
+        CasCoreAutoConfiguration.class,
+        CasOAuth20AutoConfiguration.class,
+        CasCoreWebflowAutoConfiguration.class,
+        CasCoreMultifactorAuthenticationWebflowAutoConfiguration.class
     })
-    @SpringBootConfiguration
-    @Import({
-        CasCoreHttpConfiguration.class,
-        CasCoreUtilConfiguration.class,
-        CasPersonDirectoryTestConfiguration.class,
-        CasCoreNotificationsConfiguration.class,
-        CasCoreServicesConfiguration.class,
-        CasCoreAuthenticationConfiguration.class,
-        CasCoreAuthenticationPolicyConfiguration.class,
-        CasCoreAuthenticationPrincipalConfiguration.class,
-        CasCoreAuthenticationSupportConfiguration.class,
-        CasCoreAuthenticationHandlersConfiguration.class,
-        CasCoreTicketIdGeneratorsConfiguration.class,
-        CasCoreTicketCatalogConfiguration.class,
-        CasCoreTicketsConfiguration.class,
-        CasCoreTicketComponentSerializationConfiguration.class,
-        CasCoreTicketsSerializationConfiguration.class,
-        CasWebApplicationServiceFactoryConfiguration.class,
-        CasCoreLogoutConfiguration.class,
-        CasCoreWebConfiguration.class,
-        CasCookieConfiguration.class,
-        CasCoreConfiguration.class,
-        CasAuthenticationEventExecutionPlanTestConfiguration.class,
-        CasOAuth20AuthenticationServiceSelectionStrategyConfiguration.class,
-        CasOAuth20ComponentSerializationConfiguration.class,
-        CasOAuth20Configuration.class,
-        CasOAuth20EndpointsConfiguration.class,
-        CasOAuth20ServicesConfiguration.class,
-        CasOAuth20TicketSerializationConfiguration.class
-    })
+    @SpringBootConfiguration(proxyBeanMethods = false)
+    @Import({CasPersonDirectoryTestConfiguration.class, CasAuthenticationEventExecutionPlanTestConfiguration.class})
     public static class SharedTestConfiguration {
     }
 
     protected static OAuth20AccessToken getAccessToken() {
         val tgt = new MockTicketGrantingTicket("casuser");
-        val service = RegisteredServiceTestUtils.getService();
-
+        val service = RegisteredServiceTestUtils.getService(UUID.randomUUID().toString());
         val accessToken = mock(OAuth20AccessToken.class);
-        when(accessToken.getId()).thenReturn("ABCD");
+        when(accessToken.getId()).thenReturn(UUID.randomUUID().toString());
+        when(accessToken.getCreationTime()).thenReturn(ZonedDateTime.now(Clock.systemUTC()));
         when(accessToken.getTicketGrantingTicket()).thenReturn(tgt);
         when(accessToken.getAuthentication()).thenReturn(tgt.getAuthentication());
         when(accessToken.getService()).thenReturn(service);
+        when(accessToken.getClientId()).thenReturn("client");
         when(accessToken.getExpirationPolicy()).thenReturn(NeverExpiresExpirationPolicy.INSTANCE);
 
         return accessToken;
@@ -219,6 +223,7 @@ public abstract class BaseOAuth20AuthenticatorTests {
         val tgt = new MockTicketGrantingTicket("casuser");
         val service = RegisteredServiceTestUtils.getService();
         val oauthCode = mock(OAuth20Code.class);
+        when(oauthCode.getCreationTime()).thenReturn(ZonedDateTime.now(Clock.systemUTC()));
         when(oauthCode.getId()).thenReturn(UUID.randomUUID().toString());
         when(oauthCode.getTicketGrantingTicket()).thenReturn(tgt);
         when(oauthCode.getAuthentication()).thenReturn(tgt.getAuthentication());
@@ -231,6 +236,7 @@ public abstract class BaseOAuth20AuthenticatorTests {
         val tgt = new MockTicketGrantingTicket("casuser");
 
         val refreshToken = mock(OAuth20RefreshToken.class);
+        when(refreshToken.getCreationTime()).thenReturn(ZonedDateTime.now(Clock.systemUTC()));
         when(refreshToken.getId()).thenReturn("ABCD");
         when(refreshToken.getTicketGrantingTicket()).thenReturn(tgt);
         when(refreshToken.getAuthentication()).thenReturn(tgt.getAuthentication());
