@@ -1,13 +1,18 @@
 package org.apereo.cas.web.report;
 
+import org.apereo.cas.util.feature.CasRuntimeModule;
+import org.apereo.cas.util.serialization.JacksonObjectMapperFactory;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.val;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.http.MediaType;
 import org.springframework.test.context.TestPropertySource;
-
+import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 /**
  * This is {@link CasRuntimeModulesEndpointTests}.
@@ -15,19 +20,21 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Misagh Moayyed
  * @since 6.4.0
  */
-@TestPropertySource(properties = "management.endpoint.casModules.enabled=true")
+@TestPropertySource(properties = "management.endpoint.casModules.access=UNRESTRICTED")
 @Tag("ActuatorEndpoint")
-public class CasRuntimeModulesEndpointTests extends AbstractCasEndpointTests {
-    @Autowired
-    @Qualifier("casRuntimeModulesEndpoint")
-    private CasRuntimeModulesEndpoint endpoint;
+class CasRuntimeModulesEndpointTests extends AbstractCasEndpointTests {
+    private static final ObjectMapper MAPPER = JacksonObjectMapperFactory.builder()
+        .build().toObjectMapper();
 
     @Test
-    public void verifyOperation() throws Exception {
-        var modules = endpoint.reportModules();
+    void verifyOperation() throws Throwable {
+        val modules = MAPPER.readValue(mockMvc.perform(get("/actuator/casModules")
+            .contentType(MediaType.APPLICATION_JSON)
+            .accept(MediaType.APPLICATION_JSON)
+        ).andExpect(status().isOk()).andReturn().getResponse().getContentAsString(), new TypeReference<List<CasRuntimeModule>>() {
+        });
         assertFalse(modules.isEmpty());
-
-        val module = modules.get(0);
+        val module = modules.getFirst();
         assertNotNull(module.getName());
         assertNotNull(module.getDescription());
         assertNotNull(module.getVersion());
