@@ -1,20 +1,21 @@
 package org.apereo.cas.support.saml.web.idp.profile.builders.subject;
 
 import org.apereo.cas.support.saml.BaseSamlIdPConfigurationTests;
-import org.apereo.cas.support.saml.services.idp.metadata.SamlRegisteredServiceServiceProviderMetadataFacade;
+import org.apereo.cas.support.saml.services.idp.metadata.SamlRegisteredServiceMetadataAdaptor;
+import org.apereo.cas.support.saml.web.idp.profile.builders.SamlProfileBuilderContext;
 
 import lombok.val;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
-import org.opensaml.messaging.context.MessageContext;
 import org.opensaml.saml.common.xml.SAMLConstants;
-import org.opensaml.saml.saml2.core.NameID;
+import org.opensaml.saml.saml2.core.NameIDType;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -24,11 +25,11 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Misagh Moayyed
  * @since 6.3.0
  */
-@Tag("SAML")
-public class SamlProfileSamlSubjectBuilderTests extends BaseSamlIdPConfigurationTests {
+@Tag("SAMLResponse")
+class SamlProfileSamlSubjectBuilderTests extends BaseSamlIdPConfigurationTests {
 
     @Test
-    public void verifySubjectWithNoNameId() {
+    void verifySubjectWithNoNameId() throws Throwable {
         val request = new MockHttpServletRequest();
         val response = new MockHttpServletResponse();
 
@@ -37,28 +38,34 @@ public class SamlProfileSamlSubjectBuilderTests extends BaseSamlIdPConfiguration
         service.setSkipGeneratingAssertionNameId(true);
         service.setSkipGeneratingSubjectConfirmationNotOnOrAfter(true);
         service.setSkipGeneratingSubjectConfirmationNameId(true);
-        val adaptor = SamlRegisteredServiceServiceProviderMetadataFacade.get(
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(
             samlRegisteredServiceCachingMetadataResolver,
             service, service.getServiceId()).get();
 
         val authnRequest = getAuthnRequestFor(service);
         val assertion = getAssertion();
 
-        val result = samlProfileSamlSubjectBuilder.build(authnRequest, request, response,
-            assertion, service, adaptor,
-            SAMLConstants.SAML2_POST_BINDING_URI,
-            new MessageContext());
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(request)
+            .httpResponse(response)
+            .authenticatedAssertion(Optional.of(assertion))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+        val result = samlProfileSamlSubjectBuilder.build(buildContext);
         assertNotNull(result);
     }
 
     @Test
-    public void verifySubjectWithSkewedConfData() {
+    void verifySubjectWithSkewedConfData() throws Throwable {
         val request = new MockHttpServletRequest();
         val response = new MockHttpServletResponse();
 
         val service = getSamlRegisteredServiceForTestShib(true, true);
         service.setSkewAllowance(1000);
-        val adaptor = SamlRegisteredServiceServiceProviderMetadataFacade.get(
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(
             samlRegisteredServiceCachingMetadataResolver,
             service, service.getServiceId()).get();
 
@@ -68,18 +75,24 @@ public class SamlProfileSamlSubjectBuilderTests extends BaseSamlIdPConfiguration
         val now = ZonedDateTime.now(ZoneOffset.UTC)
             .plusSeconds(service.getSkewAllowance()).toInstant().truncatedTo(ChronoUnit.SECONDS);
 
-        val subject = samlProfileSamlSubjectBuilder.build(authnRequest, request, response,
-            assertion, service, adaptor,
-            SAMLConstants.SAML2_POST_BINDING_URI,
-            new MessageContext());
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(request)
+            .httpResponse(response)
+            .authenticatedAssertion(Optional.of(assertion))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+        val subject = samlProfileSamlSubjectBuilder.build(buildContext);
         assertNotNull(subject);
 
-        val subjectData = subject.getSubjectConfirmations().get(0).getSubjectConfirmationData();
+        val subjectData = subject.getSubjectConfirmations().getFirst().getSubjectConfirmationData();
         assertEquals(now, subjectData.getNotOnOrAfter().truncatedTo(ChronoUnit.SECONDS));
     }
 
     @Test
-    public void verifyEncryptedSubject() {
+    void verifyEncryptedSubject() throws Throwable {
         val request = new MockHttpServletRequest();
         val response = new MockHttpServletResponse();
 
@@ -88,21 +101,27 @@ public class SamlProfileSamlSubjectBuilderTests extends BaseSamlIdPConfiguration
         service.setSkipGeneratingSubjectConfirmationNotOnOrAfter(false);
         service.setSkewAllowance(0);
 
-        val adaptor = SamlRegisteredServiceServiceProviderMetadataFacade.get(
+        val adaptor = SamlRegisteredServiceMetadataAdaptor.get(
             samlRegisteredServiceCachingMetadataResolver,
             service, service.getServiceId()).get();
 
         val authnRequest = getAuthnRequestFor(service);
         val assertion = getAssertion();
 
-        service.setRequiredNameIdFormat(NameID.ENCRYPTED);
-        val subject = samlProfileSamlSubjectBuilder.build(authnRequest, request, response,
-            assertion, service, adaptor,
-            SAMLConstants.SAML2_POST_BINDING_URI,
-            new MessageContext());
+        service.setRequiredNameIdFormat(NameIDType.ENCRYPTED);
+        val buildContext = SamlProfileBuilderContext.builder()
+            .samlRequest(authnRequest)
+            .httpRequest(request)
+            .httpResponse(response)
+            .authenticatedAssertion(Optional.of(assertion))
+            .registeredService(service)
+            .adaptor(adaptor)
+            .binding(SAMLConstants.SAML2_POST_BINDING_URI)
+            .build();
+        val subject = samlProfileSamlSubjectBuilder.build(buildContext);
         assertNotNull(subject);
 
-        val subjectConfirmation = subject.getSubjectConfirmations().get(0);
+        val subjectConfirmation = subject.getSubjectConfirmations().getFirst();
         assertNotNull(subjectConfirmation.getEncryptedID());
         assertNull(subjectConfirmation.getNameID());
         assertNotNull(subject.getEncryptedID());
