@@ -15,10 +15,10 @@ import org.springframework.test.context.TestPropertySource;
     "cas.saml-sp.neo-gov.name-id-attribute=cn",
     "cas.saml-sp.neo-gov.name-id-format=transient"
 })
-public class CasSamlSPNeoGovConfigurationTests extends BaseCasSamlSPConfigurationTests {
+class CasSamlSPNeoGovConfigurationTests extends BaseCasSamlSPConfigurationTests {
 
     @Override
     protected String getServiceProviderId() {
-        return casProperties.getSamlSp().getNeoGov().getEntityIds().get(0);
+        return casProperties.getSamlSp().getNeoGov().getEntityIds().getFirst();
     }
 }
