@@ -4,24 +4,22 @@ import org.apereo.cas.notifications.sms.SmsSender;
 import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.serialization.JacksonObjectMapperFactory;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.web.client.RestTemplate;
-
 import java.io.StringWriter;
 import java.net.URI;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * This is {@link ClickatellSmsSender}.
@@ -39,15 +37,15 @@ public class ClickatellSmsSender implements SmsSender {
 
     private final String serverUrl;
 
-    private final transient RestTemplate restTemplate = new RestTemplate(CollectionUtils.wrapList(new MappingJackson2HttpMessageConverter()));
+    private final RestTemplate restTemplate = new RestTemplate(CollectionUtils.wrapList(new MappingJackson2HttpMessageConverter()));
 
     @Override
     public boolean send(final String from, final String to, final String message) {
         try {
             val headers = new LinkedMultiValueMap<String, String>();
-            headers.add("Authorization", this.token);
-            headers.add("Content-Type", MediaType.APPLICATION_JSON_VALUE);
-            headers.add("Accept", MediaType.APPLICATION_JSON_VALUE);
+            headers.add(HttpHeaders.AUTHORIZATION, this.token);
+            headers.add(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
+            headers.add(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON_VALUE);
 
             val map = new HashMap<String, Object>();
             map.put("content", message);
@@ -77,8 +75,7 @@ public class ClickatellSmsSender implements SmsSender {
                 val messages = (List<Map>) body.get("messages");
                 val errors = messages.stream()
                     .filter(m -> m.containsKey("accepted") && !Boolean.parseBoolean(m.get("accepted").toString()) && m.containsKey("error"))
-                    .map(m -> (String) m.get("error"))
-                    .collect(Collectors.toList());
+                    .map(m -> (String) m.get("error")).toList();
                 if (errors.isEmpty()) {
                     return true;
                 }
