@@ -58,7 +58,7 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
     @Override
     public Collection<CredentialRegistration> getRegistrationsByUserHandle(final ByteArray handle) {
         return stream()
-            .filter(credentialRegistration -> handle.equals(credentialRegistration.getUserIdentity().getId()))
+            .filter(registration -> handle.equals(registration.getUserIdentity().getId()))
             .collect(Collectors.toList());
     }
 
@@ -71,6 +71,14 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
     }
 
     @Override
+    public boolean removeRegistrationByUsernameAndCredentialId(final String username, final ByteArray credentialId) {
+        val registrations = new HashSet<>(getRegistrationsByUsername(username));
+        val removed = registrations.removeIf(registration -> registration.getCredential().getCredentialId().equals(credentialId));
+        update(username, registrations);
+        return removed;
+    }
+
+    @Override
     public boolean removeAllRegistrations(final String username) {
         update(username, new HashSet<>());
         return true;
@@ -79,12 +87,14 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
     @Override
     public void updateSignatureCount(final AssertionResult result) {
         val username = result.getUsername();
-        val registration = getRegistrationByUsernameAndCredentialId(username, result.getCredentialId())
+        val registration = getRegistrationByUsernameAndCredentialId(username, result.getCredential().getCredentialId())
             .orElseThrow(() -> new NoSuchElementException(String.format("Credential \"%s\" is not registered to user \"%s\"",
-                result.getCredentialId(), username)));
+                result.getCredential().getCredentialId(), username)));
         val registrations = getRegistrationsByUsername(username);
         registrations.remove(registration);
-        registrations.add(registration.withSignatureCount(result.getSignatureCount()));
+        registrations.add(registration.withCredential(registration.getCredential().toBuilder()
+            .signatureCount(result.getSignatureCount())
+            .build()));
         update(username, new HashSet<>(registrations));
     }
 
@@ -122,7 +132,7 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
             .credentialId(reg.getCredential().getCredentialId())
             .userHandle(reg.getUserIdentity().getId())
             .publicKeyCose(reg.getCredential().getPublicKeyCose())
-            .signatureCount(reg.getSignatureCount())
+            .signatureCount(reg.getCredential().getSignatureCount())
             .build()));
     }
 
@@ -135,7 +145,7 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
                 .credentialId(reg.getCredential().getCredentialId())
                 .userHandle(reg.getUserIdentity().getId())
                 .publicKeyCose(reg.getCredential().getPublicKeyCose())
-                .signatureCount(reg.getSignatureCount())
+                .signatureCount(reg.getCredential().getSignatureCount())
                 .build())
             .collect(Collectors.toSet());
     }
@@ -151,8 +161,7 @@ public abstract class BaseWebAuthnCredentialRepository implements WebAuthnCreden
             val expInstant = expirationDate.atStartOfDay(ZoneOffset.UTC).toInstant();
             val removingDevices = stream()
                 .filter(Objects::nonNull)
-                .filter(d -> d.getRegistrationTime() != null && d.getRegistrationTime().isBefore(expInstant))
-                .collect(Collectors.toList());
+                .filter(d -> d.getRegistrationTime() != null && d.getRegistrationTime().isBefore(expInstant)).toList();
             if (!removingDevices.isEmpty()) {
                 LOGGER.debug("There are [{}] expired device(s) remaining in repository. Cleaning...", removingDevices.size());
                 removingDevices.forEach(device -> removeRegistrationByUsername(device.getUsername(), device));
